First commited as before_29495_rev2