@@ -1,10 +1,10 @@
 /*******************************************************************************
- *  Copyright (c) 2000, 2011 IBM Corporation and others.
+ *  Copyright (c) 2000, 2015 IBM Corporation and others.
  *  All rights reserved. This program and the accompanying materials
  *  are made available under the terms of the Eclipse Public License v1.0
  *  which accompanies this distribution, and is available at
  *  http://www.eclipse.org/legal/epl-v10.html
- * 
+ *
  *  Contributors:
  *     IBM Corporation - initial API and implementation
  *******************************************************************************/
@@ -15,8 +15,11 @@ import java.util.Hashtable;
 import java.util.Vector;
 
 import org.eclipse.swt.SWT;
-import org.eclipse.swt.graphics.*;
-import org.eclipse.swt.widgets.*;
+import org.eclipse.swt.graphics.Point;
+import org.eclipse.swt.graphics.Rectangle;
+import org.eclipse.swt.widgets.Composite;
+import org.eclipse.swt.widgets.Control;
+import org.eclipse.swt.widgets.Layout;
 
 /**
  * This implementation of the layout algorithm attempts to position controls in
@@ -40,7 +43,7 @@ import org.eclipse.swt.widgets.*;
  * end-result will be similar to the one provided by GridLayout. The difference
  * will show up for layouts that contain controls whose minimum and maximum
  * widths are not the same.
- * 
+ *
  * @see TableWrapData
  * @since 3.0
  */
@@ -89,9 +92,9 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 
 	private boolean initialLayout = true;
 
-	private Vector grid = null;
+	private Vector<TableWrapData[]> grid;
 
-	private Hashtable rowspans;
+	private Hashtable<Control, RowSpan> rowspans;
 
 	private int[] minColumnWidths, maxColumnWidths;
 
@@ -140,9 +143,10 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 
 	/**
 	 * Implements ILayoutExtension. Should not be called directly.
-	 * 
+	 *
 	 * @see ILayoutExtension
 	 */
+	@Override
 	public int computeMinimumWidth(Composite parent, boolean changed) {
 
 		Control[] children = parent.getChildren();
@@ -160,7 +164,7 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 		}
 		if (grid == null || changed) {
 			changed = true;
-			grid = new Vector();
+			grid = new Vector<>();
 			createGrid(parent);
 		}
 		if (minColumnWidths == null)
@@ -173,9 +177,10 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 
 	/**
 	 * Implements ILayoutExtension. Should not be called directly.
-	 * 
+	 *
 	 * @see ILayoutExtension
 	 */
+	@Override
 	public int computeMaximumWidth(Composite parent, boolean changed) {
 		Control[] children = parent.getChildren();
 		if (changed) {
@@ -192,7 +197,7 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 		}
 		if (grid == null || changed) {
 			changed = true;
-			grid = new Vector();
+			grid = new Vector<>();
 			createGrid(parent);
 		}
 		if (maxColumnWidths == null)
@@ -206,6 +211,7 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 	/**
 	 * @see Layout#layout(Composite, boolean)
 	 */
+	@Override
 	protected void layout(Composite parent, boolean changed) {
 
 		Rectangle clientArea = parent.getClientArea();
@@ -228,7 +234,7 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 		}
 		if (grid == null || changed) {
 			changed = true;
-			grid = new Vector();
+			grid = new Vector<>();
 			createGrid(parent);
 		}
 		resetColumnWidths();
@@ -278,7 +284,7 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 		for (int i = 0; i < grid.size(); i++) {
 			int rowHeight = rowHeights[i];
 			int x = leftMargin+clientArea.x;
-			TableWrapData[] row = (TableWrapData[]) grid.elementAt(i);
+			TableWrapData[] row = grid.elementAt(i);
 			for (int j = 0; j < numColumns; j++) {
 				TableWrapData td = row[j];
 				if (td.isItemData) {
@@ -297,7 +303,7 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 			boolean changed) {
 		int[] rowHeights = new int[grid.size()];
 		for (int i = 0; i < grid.size(); i++) {
-			TableWrapData[] row = (TableWrapData[]) grid.elementAt(i);
+			TableWrapData[] row = grid.elementAt(i);
 			rowHeights[i] = 0;
 			for (int j = 0; j < numColumns; j++) {
 				TableWrapData td = row[j];
@@ -318,7 +324,7 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 					size = new Point(size.x, td.heightHint);
 				}
 				td.compSize = size;
-				RowSpan rowspan = (RowSpan) rowspans.get(child);
+				RowSpan rowspan = rowspans.get(child);
 				if (rowspan == null) {
 					rowHeights[i] = Math.max(rowHeights[i], size.y);
 				} else
@@ -326,16 +332,15 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 			}
 			updateRowSpans(i, rowHeights[i]);
 		}
-		for (Enumeration enm = rowspans.elements(); enm.hasMoreElements();) {
-			RowSpan rowspan = (RowSpan) enm.nextElement();
+		for (Enumeration<RowSpan> enm = rowspans.elements(); enm.hasMoreElements();) {
+			RowSpan rowspan = enm.nextElement();
 			int increase = rowspan.getRequiredHeightIncrease();
 			if (increase == 0)
 				continue;
 			TableWrapData td = (TableWrapData) rowspan.child.getLayoutData();
 			int ngrowing = 0;
 			int[] affectedRows = new int[grid.size()];
-			for (int i = 0; i < growingRows.length; i++) {
-				int growingRow = growingRows[i];
+			for (int growingRow : growingRows) {
 				if (growingRow >= rowspan.row
 						&& growingRow < rowspan.row + td.rowspan) {
 					affectedRows[ngrowing++] = growingRow;
@@ -358,8 +363,8 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 	boolean isGrowingColumn(int col) {
 		if (growingColumns == null)
 			return false;
-		for (int i = 0; i < growingColumns.length; i++) {
-			if (col == growingColumns[i])
+		for (int growingColumn : growingColumns) {
+			if (col == growingColumn)
 				return true;
 		}
 		return false;
@@ -410,7 +415,7 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 		int width = td.compSize.x-td.indent;
 		width = Math.min(width, colWidth);
 		int slotHeight = rowHeights[row];
-		RowSpan rowspan = (RowSpan) rowspans.get(control);
+		RowSpan rowspan = rowspans.get(control);
 		if (rowspan != null) {
 			slotHeight = 0;
 			for (int i = row; i < row + td.rowspan; i++) {
@@ -442,14 +447,14 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 		int row, column, rowFill, columnFill;
 		Control[] children;
 		TableWrapData spacerSpec;
-		Vector growingCols = new Vector();
-		Vector growingRows = new Vector();
-		rowspans = new Hashtable();
-		// 
+		Vector<Integer> growingCols = new Vector<>();
+		Vector<Integer> growingRows = new Vector<>();
+		rowspans = new Hashtable<>();
+		//
 		children = composite.getChildren();
 		if (children.length == 0)
 			return;
-		// 
+		//
 		grid.addElement(createEmptyRow());
 		row = 0;
 		column = 0;
@@ -460,7 +465,7 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 			// Find the first available spot in the grid.
 			Control child = children[i];
 			TableWrapData spec = (TableWrapData) child.getLayoutData();
-			while (((TableWrapData[]) grid.elementAt(row))[column] != null) {
+			while (grid.elementAt(row)[column] != null) {
 				column = column + 1;
 				if (column >= numColumns) {
 					row = row + 1;
@@ -492,7 +497,7 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 			// assume the children of a
 			// composite are maintained in the order in which they are created
 			// and added to the composite.
-			((TableWrapData[]) grid.elementAt(row))[column] = spec;
+			grid.elementAt(row)[column] = spec;
 			spec.childIndex = i;
 			if (spec.grabHorizontal) {
 				updateGrowingColumns(growingCols, spec, column);
@@ -509,14 +514,14 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 				for (int c = 0; c < spec.colspan; c++) {
 					spacerSpec = new TableWrapData();
 					spacerSpec.isItemData = false;
-					((TableWrapData[]) grid.elementAt(row + r))[column + c] = spacerSpec;
+					grid.elementAt(row + r)[column + c] = spacerSpec;
 				}
 			}
 			for (int c = 1; c <= columnFill; c++) {
 				for (int r = 0; r < spec.rowspan; r++) {
 					spacerSpec = new TableWrapData();
 					spacerSpec.isItemData = false;
-					((TableWrapData[]) grid.elementAt(row + r))[column + c] = spacerSpec;
+					grid.elementAt(row + r)[column + c] = spacerSpec;
 				}
 			}
 			column = column + spec.colspan - 1;
@@ -525,43 +530,43 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 		for (int k = column + 1; k < numColumns; k++) {
 			spacerSpec = new TableWrapData();
 			spacerSpec.isItemData = false;
-			((TableWrapData[]) grid.elementAt(row))[k] = spacerSpec;
+			grid.elementAt(row)[k] = spacerSpec;
 		}
 		for (int k = row + 1; k < grid.size(); k++) {
 			spacerSpec = new TableWrapData();
 			spacerSpec.isItemData = false;
-			((TableWrapData[]) grid.elementAt(k))[column] = spacerSpec;
+			grid.elementAt(k)[column] = spacerSpec;
 		}
 		growingColumns = new int[growingCols.size()];
 		for (int i = 0; i < growingCols.size(); i++) {
-			growingColumns[i] = ((Integer) growingCols.get(i)).intValue();
+			growingColumns[i] = growingCols.get(i).intValue();
 		}
 		this.growingRows = new int[growingRows.size()];
 		for (int i = 0; i < growingRows.size(); i++) {
-			this.growingRows[i] = ((Integer) growingRows.get(i)).intValue();
+			this.growingRows[i] = growingRows.get(i).intValue();
 		}
 	}
 
-	private void updateGrowingColumns(Vector growingColumns,
+	private void updateGrowingColumns(Vector<Integer> growingColumns,
 			TableWrapData spec, int column) {
 		int affectedColumn = column + spec.colspan - 1;
 		for (int i = 0; i < growingColumns.size(); i++) {
-			Integer col = (Integer) growingColumns.get(i);
+			Integer col = growingColumns.get(i);
 			if (col.intValue() == affectedColumn)
 				return;
 		}
-		growingColumns.add(new Integer(affectedColumn));
+		growingColumns.add(Integer.valueOf(affectedColumn));
 	}
 
-	private void updateGrowingRows(Vector growingRows, TableWrapData spec,
+	private void updateGrowingRows(Vector<Integer> growingRows, TableWrapData spec,
 			int row) {
 		int affectedRow = row + spec.rowspan - 1;
 		for (int i = 0; i < growingRows.size(); i++) {
-			Integer irow = (Integer) growingRows.get(i);
+			Integer irow = growingRows.get(i);
 			if (irow.intValue() == affectedRow)
 				return;
 		}
-		growingRows.add(new Integer(affectedRow));
+		growingRows.add(Integer.valueOf(affectedRow));
 	}
 
 	private TableWrapData[] createEmptyRow() {
@@ -574,6 +579,7 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 	/**
 	 * @see Layout#computeSize(Composite, int, int, boolean)
 	 */
+	@Override
 	protected Point computeSize(Composite parent, int wHint, int hHint,
 			boolean changed) {
 		Control[] children = parent.getChildren();
@@ -594,16 +600,16 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 		}
 		if (grid == null || changed) {
 			changed = true;
-			grid = new Vector();
+			grid = new Vector<>();
 			createGrid(parent);
 		}
 		resetColumnWidths();
 		int minWidth = internalGetMinimumWidth(parent, changed);
 		int maxWidth = internalGetMaximumWidth(parent, changed);
-		
+
 		if (wHint == SWT.DEFAULT)
 			parentWidth = maxWidth;
-		
+
 		int tableWidth = parentWidth;
 		int[] columnWidths;
 		if (parentWidth <= minWidth) {
@@ -645,7 +651,7 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 		int innerHeight = 0;
 		// compute widths
 		for (int i = 0; i < grid.size(); i++) {
-			TableWrapData[] row = (TableWrapData[]) grid.elementAt(i);
+			TableWrapData[] row = grid.elementAt(i);
 			// assign widths, calculate heights
 			int rowHeight = 0;
 			for (int j = 0; j < numColumns; j++) {
@@ -666,7 +672,7 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 					Point size = computeSize(td.childIndex, cwidth, td.indent, td.maxWidth, td.maxHeight);
 					cy = size.y;
 				}
-				RowSpan rowspan = (RowSpan) rowspans.get(child);
+				RowSpan rowspan = rowspans.get(child);
 				if (rowspan != null) {
 					// don't take the height of this child into acount
 					// because it spans multiple rows
@@ -689,15 +695,15 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 	private void updateRowSpans(int row, int rowHeight) {
 		if (rowspans == null || rowspans.size() == 0)
 			return;
-		for (Enumeration enm = rowspans.elements(); enm.hasMoreElements();) {
-			RowSpan rowspan = (RowSpan) enm.nextElement();
+		for (Enumeration<RowSpan> enm = rowspans.elements(); enm.hasMoreElements();) {
+			RowSpan rowspan = enm.nextElement();
 			rowspan.update(row, rowHeight);
 		}
 	}
 
 	private int compensateForRowSpans(int totalHeight) {
-		for (Enumeration enm = rowspans.elements(); enm.hasMoreElements();) {
-			RowSpan rowspan = (RowSpan) enm.nextElement();
+		for (Enumeration<RowSpan> enm = rowspans.elements(); enm.hasMoreElements();) {
+			RowSpan rowspan = enm.nextElement();
 			totalHeight += rowspan.getRequiredHeightIncrease();
 		}
 		return totalHeight;
@@ -755,17 +761,17 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 			maxColumnWidths[i] = 0;
 		}
 	}
-	
+
 	void calculateColumnWidths(Composite parent, int [] columnWidths, boolean max, boolean changed, boolean makeColumnsEqualWidth2) {
 		boolean secondPassNeeded=false;
 		int widestColumnWidth = 0;
 		for (int i = 0; i < grid.size(); i++) {
-			TableWrapData[] row = (TableWrapData[]) grid.elementAt(i);
+			TableWrapData[] row = grid.elementAt(i);
 			for (int j = 0; j < numColumns; j++) {
 				TableWrapData td = row[j];
 				if (td.isItemData == false)
 					continue;
-				
+
 				if (td.colspan>1) {
 					// we will not do controls with multiple column span
 					// here - increment and continue
@@ -791,10 +797,10 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 			}
 		}
 		if (!secondPassNeeded) return;
-		
+
 		// Second pass for controls with multi-column horizontal span
 		for (int i = 0; i < grid.size(); i++) {
-			TableWrapData[] row = (TableWrapData[]) grid.elementAt(i);
+			TableWrapData[] row = grid.elementAt(i);
 			for (int j = 0; j < numColumns; j++) {
 				TableWrapData td = row[j];
 				if (td.isItemData == false || td.colspan==1)
@@ -843,15 +849,15 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 					}
 				}
 			}
-		}		
-	}	
-	
+		}
+	}
+
 	boolean isWrap(Control control) {
 		if (control instanceof Composite
 				&& ((Composite) control).getLayout() instanceof ILayoutExtension)
 			return true;
 		return (control.getStyle() & SWT.WRAP) != 0;
-	}	
+	}
 
 	private void initializeIfNeeded(Composite parent, boolean changed) {
 		if (changed)
@@ -864,8 +870,7 @@ public final class TableWrapLayout extends Layout implements ILayoutExtension {
 
 	void initializeLayoutData(Composite composite) {
 		Control[] children = composite.getChildren();
-		for (int i = 0; i < children.length; i++) {
-			Control child = children[i];
+		for (Control child : children) {
 			if (child.getLayoutData() == null) {
 				child.setLayoutData(new TableWrapData());
 			}
