@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2006, 2012 IBM Corporation and others.
+ * Copyright (c) 2006, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -7,24 +7,26 @@
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
+ *     Andrey Loskutov <loskutov@gmx.de> - Bug 372799
+ *     Patrik Suzzi <psuzzi@gmail.com> - Bug 490700
  *******************************************************************************/
 
 package org.eclipse.ui.internal;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.Map.Entry;
 import java.util.Set;
 import org.eclipse.core.runtime.Assert;
 import org.eclipse.core.runtime.AssertionFailedException;
 import org.eclipse.core.runtime.IProgressMonitor;
 import org.eclipse.core.runtime.IStatus;
 import org.eclipse.core.runtime.ListenerList;
-import org.eclipse.core.runtime.SubProgressMonitor;
+import org.eclipse.core.runtime.SubMonitor;
 import org.eclipse.jface.dialogs.IDialogConstants;
 import org.eclipse.jface.dialogs.MessageDialog;
 import org.eclipse.jface.dialogs.MessageDialogWithToggle;
@@ -64,36 +66,37 @@ import org.eclipse.ui.model.WorkbenchPartLabelProvider;
 
 /**
  * The model manager maintains a list of open saveable models.
- * 
+ *
  * @see Saveable
  * @see ISaveablesSource
- * 
+ *
  * @since 3.2
  */
 public class SaveablesList implements ISaveablesLifecycleListener {
 
-	private ListenerList listeners = new ListenerList();
+	private ListenerList<ISaveablesLifecycleListener> listeners = new ListenerList<>();
 
 	// event source (mostly ISaveablesSource) -> Set of Saveable
-	private Map modelMap = new HashMap();
+	private Map<Object, Set<Saveable>> modelMap = new HashMap<>();
 
-	// reference counting map, Saveable -> Integer
-	private Map modelRefCounts = new HashMap();
+	// reference counting map
+	private Map<Saveable, Integer> modelRefCounts = new HashMap<>();
 
-	private Set nonPartSources = new HashSet();
+	private Set<ISaveablesSource> nonPartSources = new HashSet<>();
 
 	/**
 	 * Returns the list of open models managed by this model manager.
-	 * 
+	 *
 	 * @return a list of models
 	 */
 	public Saveable[] getOpenModels() {
-		Set allDistinctModels = new HashSet();
-		Iterator saveables = modelMap.values().iterator();
-		while (saveables.hasNext())
-			allDistinctModels.addAll((Set)saveables.next());
-		
-		return (Saveable[]) allDistinctModels.toArray(
+		Set<Saveable> allDistinctModels = new HashSet<>();
+		Iterator<Set<Saveable>> saveables = modelMap.values().iterator();
+		while (saveables.hasNext()) {
+			allDistinctModels.addAll(saveables.next());
+		}
+
+		return allDistinctModels.toArray(
 				new Saveable[allDistinctModels.size()]);
 	}
 
@@ -105,9 +108,9 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 			return false;
 		}
 		boolean result = false;
-		Set modelsForSource = (Set) modelMap.get(source);
+		Set<Saveable> modelsForSource = modelMap.get(source);
 		if (modelsForSource == null) {
-			modelsForSource = new HashSet();
+			modelsForSource = new HashSet<>();
 			modelMap.put(source, modelsForSource);
 		}
 		if (modelsForSource.add(model)) {
@@ -121,39 +124,39 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 
 	/**
 	 * returns true if the given key was added for the first time
-	 * 
+	 *
 	 * @param referenceMap
 	 * @param key
 	 * @return true if the ref count of the given key is now 1
 	 */
-	private boolean incrementRefCount(Map referenceMap, Object key) {
+	private boolean incrementRefCount(Map<Saveable, Integer> referenceMap, Saveable key) {
 		boolean result = false;
-		Integer refCount = (Integer) referenceMap.get(key);
+		Integer refCount = referenceMap.get(key);
 		if (refCount == null) {
 			result = true;
-			refCount = new Integer(0);
+			refCount = Integer.valueOf(0);
 		}
-		referenceMap.put(key, new Integer(refCount.intValue() + 1));
+		referenceMap.put(key, Integer.valueOf(refCount.intValue() + 1));
 		return result;
 	}
 
 	/**
 	 * returns true if the given key has been removed
-	 * 
+	 *
 	 * @param referenceMap
 	 * @param key
 	 * @return true if the ref count of the given key was 1
 	 */
-	private boolean decrementRefCount(Map referenceMap, Object key) {
+	private boolean decrementRefCount(Map<Saveable, Integer> referenceMap, Saveable key) {
 		boolean result = false;
-		Integer refCount = (Integer) referenceMap.get(key);
+		Integer refCount = referenceMap.get(key);
 		if (refCount == null)
-			Assert.isTrue(false, key + ": " + ((Saveable) key).getName()); //$NON-NLS-1$
+			Assert.isTrue(false, key + ": " + key.getName()); //$NON-NLS-1$
 		if (refCount.intValue() == 1) {
 			referenceMap.remove(key);
 			result = true;
 		} else {
-			referenceMap.put(key, new Integer(refCount.intValue() - 1));
+			referenceMap.put(key, Integer.valueOf(refCount.intValue() - 1));
 		}
 		return result;
 	}
@@ -161,7 +164,7 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	// returns true if this model was removed from getModels();
 	private boolean removeModel(Object source, Saveable model) {
 		boolean result = false;
-		Set modelsForSource = (Set) modelMap.get(source);
+		Set<Saveable> modelsForSource = modelMap.get(source);
 		if (modelsForSource == null) {
 			logWarning(
 					"Ignored attempt to remove a saveable when no saveables were known", source, model); //$NON-NLS-1$
@@ -180,7 +183,7 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	}
 
 	private void logWarning(String message, Object source, Saveable model) {
-		// create a new exception 
+		// create a new exception
 		AssertionFailedException assertionFailedException = new AssertionFailedException("unknown saveable: " + model //$NON-NLS-1$
 				+ " from part: " + source); //$NON-NLS-1$
 		// record the current stack trace to help with debugging
@@ -223,8 +226,8 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 			break;
 		case SaveablesLifecycleEvent.PRE_CLOSE:
 			Saveable[] models = event.getSaveables();
-			Map modelsDecrementing = new HashMap();
-			Set modelsClosing = new HashSet();
+			Map<Saveable, Integer> modelsDecrementing = new HashMap<>();
+			Set<Saveable> modelsClosing = new HashSet<>();
 			for (int i = 0; i < models.length; i++) {
 				incrementRefCount(modelsDecrementing, models[i]);
 			}
@@ -265,7 +268,7 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 * @param modelArray
 	 */
 	private void removeModels(Object source, Saveable[] modelArray) {
-		List removed = new ArrayList();
+		List<Saveable> removed = new ArrayList<>();
 		for (int i = 0; i < modelArray.length; i++) {
 			Saveable model = modelArray[i];
 			if (removeModel(source, model)) {
@@ -274,7 +277,7 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 		}
 		if (removed.size() > 0) {
 			fireModelLifecycleEvent(new SaveablesLifecycleEvent(this,
-					SaveablesLifecycleEvent.POST_OPEN, (Saveable[]) removed
+					SaveablesLifecycleEvent.POST_OPEN, removed
 							.toArray(new Saveable[removed.size()]), false));
 		}
 	}
@@ -284,7 +287,7 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 * @param modelArray
 	 */
 	private void addModels(Object source, Saveable[] modelArray) {
-		List added = new ArrayList();
+		List<Saveable> added = new ArrayList<>();
 		for (int i = 0; i < modelArray.length; i++) {
 			Saveable model = modelArray[i];
 			if (addModel(source, model)) {
@@ -293,7 +296,7 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 		}
 		if (added.size() > 0) {
 			fireModelLifecycleEvent(new SaveablesLifecycleEvent(this,
-					SaveablesLifecycleEvent.POST_OPEN, (Saveable[]) added
+					SaveablesLifecycleEvent.POST_OPEN, added
 							.toArray(new Saveable[added.size()]), false));
 		}
 	}
@@ -302,10 +305,8 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 * @param event
 	 */
 	private void fireModelLifecycleEvent(SaveablesLifecycleEvent event) {
-		Object[] listenerArray = listeners.getListeners();
-		for (int i = 0; i < listenerArray.length; i++) {
-			((ISaveablesLifecycleListener) listenerArray[i])
-					.handleLifecycleEvent(event);
+		for (ISaveablesLifecycleListener listener : listeners) {
+			listener.handleLifecycleEvent(event);
 		}
 	}
 
@@ -320,7 +321,7 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 * <p>
 	 * Listeners should ignore all other event types, including PRE_CLOSE. There
 	 * is no guarantee that listeners are notified before models are closed.
-	 * 
+	 *
 	 * @param listener
 	 */
 	public void addModelLifecycleListener(ISaveablesLifecycleListener listener) {
@@ -330,7 +331,7 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	/**
 	 * Removes the given listener from the list of listeners. Has no effect if
 	 * the given listener is not contained in the list.
-	 * 
+	 *
 	 * @param listener
 	 */
 	public void removeModelLifecycleListener(ISaveablesLifecycleListener listener) {
@@ -343,27 +344,31 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 * @param window
 	 * @return the post close info to be passed to postClose
 	 */
-	public Object preCloseParts(List partsToClose, boolean save,
+	public Object preCloseParts(List<IWorkbenchPart> partsToClose, boolean save,
 			final IWorkbenchWindow window) {
 		return preCloseParts(partsToClose, save, window, window);
 	}
 
-	public Object preCloseParts(List partsToClose, boolean save, IShellProvider shellProvider,
+	public Object preCloseParts(List<IWorkbenchPart> partsToClose, boolean save, IShellProvider shellProvider,
 			final IWorkbenchWindow window) {
+		return preCloseParts(partsToClose, false, save, shellProvider, window);
+	}
+
+	public Object preCloseParts(List<IWorkbenchPart> partsToClose, boolean addNonPartSources, boolean save,
+			IShellProvider shellProvider, final IWorkbenchWindow window) {
 		// reference count (how many occurrences of a model will go away?)
 		PostCloseInfo postCloseInfo = new PostCloseInfo();
-		for (Iterator it = partsToClose.iterator(); it.hasNext();) {
-			IWorkbenchPart part = (IWorkbenchPart) it.next();
+		for (IWorkbenchPart part : partsToClose) {
 			postCloseInfo.partsClosing.add(part);
-			if (part instanceof ISaveablePart) {
-				ISaveablePart saveablePart = (ISaveablePart) part;
-				if (save && !saveablePart.isSaveOnCloseNeeded()) {
+			ISaveablePart saveable = SaveableHelper.getSaveable(part);
+			if (saveable != null) {
+				if (save && !saveable.isSaveOnCloseNeeded()) {
 					// pretend for now that this part is not closing
 					continue;
 				}
 			}
-			if (save && part instanceof ISaveablePart2) {
-				ISaveablePart2 saveablePart2 = (ISaveablePart2) part;
+			if (save && saveable instanceof ISaveablePart2) {
+				ISaveablePart2 saveablePart2 = (ISaveablePart2) saveable;
 				// TODO show saveablePart2 before prompting, see
 				// EditorManager.saveAll
 				int response = SaveableHelper.savePart(saveablePart2, window,
@@ -385,6 +390,16 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 		}
 		fillModelsClosing(postCloseInfo.modelsClosing,
 				postCloseInfo.modelsDecrementing);
+		if (addNonPartSources) {
+			for (ISaveablesSource nonPartSource : getNonPartSources()) {
+				Saveable[] saveables = nonPartSource.getSaveables();
+				for (Saveable saveable : saveables) {
+					if (saveable.isDirty()) {
+						postCloseInfo.modelsClosing.add(saveable);
+					}
+				}
+			}
+		}
 		if (save) {
 			boolean canceled = promptForSavingIfNecessary(shellProvider, window,
 					postCloseInfo.modelsClosing, postCloseInfo.modelsDecrementing, true);
@@ -402,31 +417,30 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 * @return true if the user canceled
 	 */
 	private boolean promptForSavingIfNecessary(final IWorkbenchWindow window,
-			Set modelsClosing, Map modelsDecrementing, boolean canCancel) {
+			Set<Saveable> modelsClosing, Map<Saveable, Integer> modelsDecrementing, boolean canCancel) {
 		return promptForSavingIfNecessary(window, window, modelsClosing, modelsDecrementing,
 				canCancel);
 	}
 
 	private boolean promptForSavingIfNecessary(IShellProvider shellProvider,
-			IWorkbenchWindow window, Set modelsClosing, Map modelsDecrementing, boolean canCancel) {
-		List modelsToOptionallySave = new ArrayList();
-		for (Iterator it = modelsDecrementing.keySet().iterator(); it.hasNext();) {
-			Saveable modelDecrementing = (Saveable) it.next();
+ IWorkbenchWindow window,
+			Set<Saveable> modelsClosing, Map<Saveable, Integer> modelsDecrementing, boolean canCancel) {
+		List<Saveable> modelsToOptionallySave = new ArrayList<>();
+		for (Saveable modelDecrementing : modelsDecrementing.keySet()) {
 			if (modelDecrementing.isDirty() && !modelsClosing.contains(modelDecrementing)) {
 				modelsToOptionallySave.add(modelDecrementing);
 			}
 		}
-		
+
 		boolean shouldCancel = modelsToOptionallySave.isEmpty() ? false : promptForSaving(
 				modelsToOptionallySave, shellProvider, window, canCancel, true);
-		
+
 		if (shouldCancel) {
 			return true;
 		}
 
-		List modelsToSave = new ArrayList();
-		for (Iterator it = modelsClosing.iterator(); it.hasNext();) {
-			Saveable modelClosing = (Saveable) it.next();
+		List<Saveable> modelsToSave = new ArrayList<>();
+		for (Saveable modelClosing : modelsClosing) {
 			if (modelClosing.isDirty()) {
 				modelsToSave.add(modelClosing);
 			}
@@ -439,10 +453,10 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 * @param modelsClosing
 	 * @param modelsDecrementing
 	 */
-	private void fillModelsClosing(Set modelsClosing, Map modelsDecrementing) {
-		for (Iterator it = modelsDecrementing.keySet().iterator(); it.hasNext();) {
-			Saveable model = (Saveable) it.next();
-			if (modelsDecrementing.get(model).equals(modelRefCounts.get(model))) {
+	private void fillModelsClosing(Set<Saveable> modelsClosing, Map<Saveable, Integer> modelsDecrementing) {
+		for (Entry<Saveable, Integer> entry : modelsDecrementing.entrySet()) {
+			Saveable model = entry.getKey();
+			if (entry.getValue().equals(modelRefCounts.get(model))) {
 				modelsClosing.add(model);
 			}
 		}
@@ -460,7 +474,7 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 * @param stillOpenElsewhere whether the models are referenced by open parts
 	 * @return true if the user canceled
 	 */
-	public boolean promptForSaving(List modelsToSave,
+	public boolean promptForSaving(List<Saveable> modelsToSave,
 			final IShellProvider shellProvider, IRunnableContext runnableContext, final boolean canCancel, boolean stillOpenElsewhere) {
 		// Save parts, exit the method if cancel is pressed.
 		if (modelsToSave.size() > 0) {
@@ -476,7 +490,7 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 				modelsToSave.clear();
 				return false;
 			} else if (modelsToSave.size() == 1) {
-				Saveable model = (Saveable) modelsToSave.get(0);
+				Saveable model = modelsToSave.get(0);
 				// Show a dialog.
 				String[] buttons;
 				if(canCancel) {
@@ -490,7 +504,7 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 
 				// don't save if we don't prompt
 				int choice = ISaveablePart2.NO;
-				
+
 				MessageDialog dialog;
 				if (stillOpenElsewhere) {
 					String message = NLS
@@ -516,7 +530,7 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 									model.getName());
 					dialog = new MessageDialog(shellProvider.getShell(),
 							WorkbenchMessages.Save_Resource, null, message,
-							MessageDialog.QUESTION, buttons, 0) {
+							MessageDialog.QUESTION, 0, buttons) {
 						@Override
 						protected int getShellStyle() {
 							return (canCancel ? SWT.CLOSE : SWT.NONE)
@@ -530,7 +544,7 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 				choice = SaveableHelper.testGetAutomatedResponse();
 				if (SaveableHelper.testGetAutomatedResponse() == SaveableHelper.USER_RESPONSE) {
 					choice = dialog.open();
-					
+
 					if(stillOpenElsewhere) {
 						// map value of choice back to ISaveablePart2 values
 						switch (choice) {
@@ -588,8 +602,14 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 					if (dlg.getDontPromptSelection()) {
 						apiPreferenceStore.setValue(IWorkbenchPreferenceConstants.PROMPT_WHEN_SAVEABLE_STILL_OPEN, false);
 					}
-					
-					modelsToSave = Arrays.asList(dlg.getResult());
+
+					modelsToSave = new ArrayList<>();
+					Object[] objects = dlg.getResult();
+					for (Object object : objects) {
+						if (object instanceof Saveable) {
+							modelsToSave.add((Saveable) object);
+						}
+					}
 				}
 			}
 		}
@@ -607,23 +627,44 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 *            use a workbench window for this.
 	 * @return <code>true</code> if the operation was canceled
 	 */
-	public boolean saveModels(final List finalModels, final IShellProvider shellProvider, IRunnableContext runnableContext) {
+	public boolean saveModels(final List<Saveable> finalModels, final IShellProvider shellProvider,
+			IRunnableContext runnableContext) {
+		return saveModels(finalModels, shellProvider, runnableContext, true);
+	}
+
+	/**
+	 * Save the given models.
+	 *
+	 * @param finalModels
+	 *            the list of models to be saved
+	 * @param shellProvider
+	 *            the provider used to obtain a shell in prompting is required.
+	 *            Clients can use a workbench window for this.
+	 * @param runnableContext
+	 *            a runnable context that will be used to provide a progress
+	 *            monitor while the save is taking place. Clients can use a
+	 *            workbench window for this.
+	 * @param blockUntilSaved
+	 * @return <code>true</code> if the operation was canceled
+	 */
+	public boolean saveModels(final List<Saveable> finalModels, final IShellProvider shellProvider,
+			IRunnableContext runnableContext, final boolean blockUntilSaved) {
 		IRunnableWithProgress progressOp = new IRunnableWithProgress() {
 			@Override
 			public void run(IProgressMonitor monitor) {
-				IProgressMonitor monitorWrap = new EventLoopProgressMonitor(
-						monitor);
-				monitorWrap.beginTask(WorkbenchMessages.Saving_Modifications, finalModels.size());
-				for (Iterator i = finalModels.iterator(); i.hasNext();) {
-					Saveable model = (Saveable) i.next();
+				IProgressMonitor monitorWrap = new EventLoopProgressMonitor(monitor);
+				SubMonitor subMonitor = SubMonitor.convert(monitorWrap, WorkbenchMessages.Saving_Modifications,
+						finalModels.size());
+				for (Saveable model : finalModels) {
 					// handle case where this model got saved as a result of
 					// saving another
 					if (!model.isDirty()) {
-						monitor.worked(1);
+						subMonitor.worked(1);
 						continue;
 					}
-					SaveableHelper.doSaveModel(model, new SubProgressMonitor(monitorWrap, 1), shellProvider, true);
-					if (monitorWrap.isCanceled())
+					SaveableHelper.doSaveModel(model, subMonitor.split(1),
+							shellProvider, blockUntilSaved);
+					if (subMonitor.isCanceled())
 						break;
 				}
 				monitorWrap.done();
@@ -637,11 +678,11 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	}
 
 	private static class PostCloseInfo {
-		private List partsClosing = new ArrayList();
+		private List<IWorkbenchPart> partsClosing = new ArrayList<>();
 
-		private Map modelsDecrementing = new HashMap();
+		private Map<Saveable, Integer> modelsDecrementing = new HashMap<>();
 
-		private Set modelsClosing = new HashSet();
+		private Set<Saveable> modelsClosing = new HashSet<>();
 	}
 
 	/**
@@ -649,16 +690,14 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 */
 	public void postClose(Object postCloseInfoObject) {
 		PostCloseInfo postCloseInfo = (PostCloseInfo) postCloseInfoObject;
-		List removed = new ArrayList();
-		for (Iterator it = postCloseInfo.partsClosing.iterator(); it.hasNext();) {
-			IWorkbenchPart part = (IWorkbenchPart) it.next();
-			Set saveables = (Set) modelMap.get(part);
+		List<Saveable> removed = new ArrayList<>();
+		for (IWorkbenchPart part : postCloseInfo.partsClosing) {
+			Set<Saveable> saveables = modelMap.get(part);
 			if (saveables != null) {
 				// make a copy to avoid a ConcurrentModificationException - we
 				// will remove from the original set as we iterate
-				saveables = new HashSet(saveables);
-				for (Iterator it2 = saveables.iterator(); it2.hasNext();) {
-					Saveable saveable = (Saveable) it2.next();
+				saveables = new HashSet<>(saveables);
+				for (Saveable saveable : saveables) {
 					if (removeModel(part, saveable)) {
 						removed.add(saveable);
 					}
@@ -667,7 +706,7 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 		}
 		if (removed.size() > 0) {
 			fireModelLifecycleEvent(new SaveablesLifecycleEvent(this,
-					SaveablesLifecycleEvent.POST_CLOSE, (Saveable[]) removed
+					SaveablesLifecycleEvent.POST_CLOSE, removed
 							.toArray(new Saveable[removed.size()]), false));
 		}
 	}
@@ -676,7 +715,7 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 * Returns the saveable models provided by the given part. If the part does
 	 * not provide any models, a default model is returned representing the
 	 * part.
-	 * 
+	 *
 	 * @param part
 	 *            the workbench part
 	 * @return the saveable models
@@ -685,7 +724,7 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 		if (part instanceof ISaveablesSource) {
 			ISaveablesSource source = (ISaveablesSource) part;
 			return source.getSaveables();
-		} else if (part instanceof ISaveablePart) {
+		} else if (SaveableHelper.isSaveable(part)) {
 			return new Saveable[] { new DefaultSaveable(part) };
 		} else {
 			return new Saveable[0];
@@ -693,14 +732,14 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	}
 
 	/**
-	 * @param actualPart
+	 * @param part
 	 */
 	public void postOpen(IWorkbenchPart part) {
 		addModels(part, getSaveables(part));
 	}
 
 	/**
-	 * @param actualPart
+	 * @param part
 	 */
 	public void dirtyChanged(IWorkbenchPart part) {
 		Saveable[] saveables = getSaveables(part);
@@ -712,15 +751,14 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 
 	/**
 	 * For testing purposes. Not to be called by clients.
-	 * 
+	 *
 	 * @param model
-	 * @return
+	 * @return never null
 	 */
 	public Object[] testGetSourcesForModel(Saveable model) {
-		List result = new ArrayList();
-		for (Iterator it = modelMap.entrySet().iterator(); it.hasNext();) {
-			Map.Entry entry = (Map.Entry) it.next();
-			Set values = (Set) entry.getValue();
+		List<Object> result = new ArrayList<>();
+		for (Entry<Object, Set<Saveable>> entry : modelMap.entrySet()) {
+			Set<Saveable> values = entry.getValue();
 			if (values.contains(model)) {
 				result.add(entry.getKey());
 			}
@@ -748,9 +786,6 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 			setShellStyle(shellStyle | SWT.SHEET);
 		}
 
-		/**
-		 * @return
-		 */
 		public boolean getDontPromptSelection() {
 			return dontPromptSelection;
 		}
@@ -764,15 +799,15 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 						IDialogConstants.CANCEL_LABEL, false);
 			}
 		}
-		
+
 		@Override
 		protected Control createDialogArea(Composite parent) {
 			 Composite dialogAreaComposite = (Composite) super.createDialogArea(parent);
-			 
+
 			 if (stillOpenElsewhere) {
 				 Composite checkboxComposite = new Composite(dialogAreaComposite, SWT.NONE);
 				 checkboxComposite.setLayout(new GridLayout(2, false));
-				 
+
 				 checkbox = new Button(checkboxComposite, SWT.CHECK);
 				 checkbox.addSelectionListener(new SelectionAdapter() {
 					@Override
@@ -783,14 +818,14 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 				 GridData gd = new GridData();
 				 gd.horizontalAlignment = SWT.BEGINNING;
 				 checkbox.setLayoutData(gd);
-				 
+
 				 Label label = new Label(checkboxComposite, SWT.NONE);
 				 label.setText(WorkbenchMessages.EditorManager_closeWithoutPromptingOption);
 				 gd = new GridData();
 				 gd.grabExcessHorizontalSpace = true;
 				 gd.horizontalAlignment = SWT.BEGINNING;
 			 }
-			 
+
 			 return dialogAreaComposite;
 		}
 	}
@@ -800,23 +835,19 @@ public class SaveablesList implements ISaveablesLifecycleListener {
 	 *         list which are not workbench parts.
 	 */
 	public ISaveablesSource[] getNonPartSources() {
-		return (ISaveablesSource[]) nonPartSources
+		return nonPartSources
 				.toArray(new ISaveablesSource[nonPartSources.size()]);
 	}
 
-	/**
-	 * @param model
-	 */
 	public IWorkbenchPart[] getPartsForSaveable(Saveable model) {
-		List result = new ArrayList();
-		for (Iterator it = modelMap.entrySet().iterator(); it.hasNext();) {
-			Map.Entry entry = (Map.Entry) it.next();
-			Set values = (Set) entry.getValue();
+		List<IWorkbenchPart> result = new ArrayList<>();
+		for (Entry<Object, Set<Saveable>> entry : modelMap.entrySet()) {
+			Set<Saveable> values = entry.getValue();
 			if (values.contains(model) && entry.getKey() instanceof IWorkbenchPart) {
-				result.add(entry.getKey());
+				result.add((IWorkbenchPart) entry.getKey());
 			}
 		}
-		return (IWorkbenchPart[]) result.toArray(new IWorkbenchPart[result.size()]);
+		return result.toArray(new IWorkbenchPart[result.size()]);
 	}
 
 }
