@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2014 IBM Corporation and others.
+ * Copyright (c) 2000, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -7,13 +7,15 @@
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
- *     Francis Upton - <francisu@ieee.org> - 
- *     		Fix for Bug 217777 [Workbench] Workbench event loop does not terminate if Display is closed
- *     Tristan Hume - <trishume@gmail.com> -
- *     		Fix for Bug 2369 [Workbench] Would like to be able to save workspace without exiting
- *     		Implemented workbench auto-save to correctly restore state in case of crash.
- *     Lars Vogel <Lars.Vogel@gmail.com> - Bug 422533
+ *     Francis Upton - <francisu@ieee.org> - Bug 217777
+ *     Tristan Hume - <trishume@gmail.com> - Bug 2369
+ *     Lars Vogel <Lars.Vogel@vogella.com> - Bug 422533, 440136, 445724, 366708, 418661, 456897, 472654, 481516, 486543
  *     Terry Parker <tparker@google.com> - Bug 416673
+ *     Sergey Prigogin <eclipse.sprigogin@gmail.com> - Bug 438324
+ *     Snjezana Peco <snjeza.peco@gmail.com> - Bug 405542
+ *     Andrey Loskutov <loskutov@gmx.de> - Bug 372799
+ *     Mickael Istria (Red Hat Inc.) - Bug 469918
+ *     Patrik Suzzi <psuzzi@gmail.com> - Bug 487297
  *******************************************************************************/
 
 package org.eclipse.ui.internal;
@@ -26,8 +28,12 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.StringReader;
 import java.io.StringWriter;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.URL;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.Dictionary;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -116,12 +122,13 @@ import org.eclipse.jface.action.MenuManager;
 import org.eclipse.jface.bindings.BindingManager;
 import org.eclipse.jface.bindings.BindingManagerEvent;
 import org.eclipse.jface.bindings.IBindingManagerListener;
-import org.eclipse.jface.databinding.swt.SWTObservables;
+import org.eclipse.jface.databinding.swt.DisplayRealm;
 import org.eclipse.jface.dialogs.ErrorDialog;
 import org.eclipse.jface.dialogs.MessageDialog;
 import org.eclipse.jface.operation.IRunnableContext;
 import org.eclipse.jface.operation.ModalContext;
 import org.eclipse.jface.preference.IPreferenceStore;
+import org.eclipse.jface.preference.PreferenceConverter;
 import org.eclipse.jface.preference.PreferenceManager;
 import org.eclipse.jface.resource.ImageDescriptor;
 import org.eclipse.jface.util.BidiUtils;
@@ -138,6 +145,7 @@ import org.eclipse.swt.SWT;
 import org.eclipse.swt.SWTException;
 import org.eclipse.swt.custom.BusyIndicator;
 import org.eclipse.swt.graphics.DeviceData;
+import org.eclipse.swt.graphics.FontData;
 import org.eclipse.swt.graphics.Image;
 import org.eclipse.swt.graphics.Point;
 import org.eclipse.swt.widgets.Display;
@@ -198,6 +206,7 @@ import org.eclipse.ui.internal.dialogs.PropertyPageContributorManager;
 import org.eclipse.ui.internal.e4.compatibility.CompatibilityEditor;
 import org.eclipse.ui.internal.e4.compatibility.CompatibilityPart;
 import org.eclipse.ui.internal.e4.compatibility.E4Util;
+import org.eclipse.ui.internal.e4.migration.WorkbenchMigrationProcessor;
 import org.eclipse.ui.internal.handlers.LegacyHandlerService;
 import org.eclipse.ui.internal.help.WorkbenchHelpSystem;
 import org.eclipse.ui.internal.intro.IIntroRegistry;
@@ -249,6 +258,7 @@ import org.eclipse.ui.splash.AbstractSplashHandler;
 import org.eclipse.ui.statushandlers.StatusManager;
 import org.eclipse.ui.swt.IFocusService;
 import org.eclipse.ui.testing.ContributionInfo;
+import org.eclipse.ui.themes.ITheme;
 import org.eclipse.ui.themes.IThemeManager;
 import org.eclipse.ui.views.IViewDescriptor;
 import org.eclipse.ui.views.IViewRegistry;
@@ -263,7 +273,7 @@ import org.osgi.util.tracker.ServiceTracker;
 
 /**
  * The workbench class represents the top of the Eclipse user interface. Its
- * primary responsability is the management of workbench windows, dialogs,
+ * primary responsibility is the management of workbench windows, dialogs,
  * wizards, and other workbench-related windows.
  * <p>
  * Note that any code that is run during the creation of a workbench instance
@@ -280,7 +290,18 @@ public final class Workbench extends EventManager implements IWorkbench,
 
 	public static String WORKBENCH_AUTO_SAVE_JOB = "Workbench Auto-Save Job"; //$NON-NLS-1$
 
-	private static String MEMENTO_KEY = "memento"; //$NON-NLS-1$
+	private static final String WORKBENCH_AUTO_SAVE_BACKGROUND_JOB = "Workbench Auto-Save Background Job"; //$NON-NLS-1$
+
+	public static String MEMENTO_KEY = "memento"; //$NON-NLS-1$
+
+	public static final String EDITOR_TAG = "Editor"; //$NON-NLS-1$
+
+	private static final String PROP_VM = "eclipse.vm"; //$NON-NLS-1$
+	private static final String PROP_VMARGS = "eclipse.vmargs"; //$NON-NLS-1$
+	private static final String PROP_COMMANDS = "eclipse.commands"; //$NON-NLS-1$
+	private static final String PROP_EXIT_CODE = "eclipse.exitcode"; //$NON-NLS-1$
+	private static final String CMD_DATA = "-data"; //$NON-NLS-1$
+	private static final String CMD_VMARGS = "-vmargs"; //$NON-NLS-1$
 
 	private final class StartupProgressBundleListener implements SynchronousBundleListener {
 
@@ -289,13 +310,13 @@ public final class Workbench extends EventManager implements IWorkbench,
 		private final int maximumProgressCount;
 
 		// stack of names of bundles currently starting
-		private final List starting;
+		private final List<String> starting;
 
 		StartupProgressBundleListener(IProgressMonitor progressMonitor, int maximumProgressCount) {
 			super();
 			this.progressMonitor = progressMonitor;
 			this.maximumProgressCount = maximumProgressCount;
-			this.starting = new ArrayList();
+			this.starting = new ArrayList<>();
 		}
 
 		@Override
@@ -336,9 +357,7 @@ public final class Workbench extends EventManager implements IWorkbench,
 	 */
 	public static final String EARLY_STARTUP_FAMILY = "earlyStartup"; //$NON-NLS-1$
 
-	static final String VERSION_STRING[] = { "0.046", "2.0" }; //$NON-NLS-1$ //$NON-NLS-2$
-
-	static final String DEFAULT_WORKBENCH_STATE_FILENAME = "workbench.xml"; //$NON-NLS-1$
+	public static final String DEFAULT_WORKBENCH_STATE_FILENAME = "workbench.xml"; //$NON-NLS-1$
 
 	/**
 	 * Holds onto the only instance of Workbench.
@@ -347,15 +366,15 @@ public final class Workbench extends EventManager implements IWorkbench,
 
 	/**
 	 * The testable object facade.
-	 * 
+	 *
 	 * @since 3.0
 	 */
 	private static WorkbenchTestable testableObject;
 
 	/**
 	 * Signals that the workbench should create a splash implementation when
-	 * instantiated. Intial value is <code>true</code>.
-	 * 
+	 * instantiated. Initial value is <code>true</code>.
+	 *
 	 * @since 3.3
 	 */
 	private static boolean createSplash = true;
@@ -367,7 +386,7 @@ public final class Workbench extends EventManager implements IWorkbench,
 
 	/**
 	 * The display used for all UI interactions with this workbench.
-	 * 
+	 *
 	 * @since 3.0
 	 */
 	private Display display;
@@ -397,7 +416,7 @@ public final class Workbench extends EventManager implements IWorkbench,
 	/**
 	 * Advisor providing application-specific configuration and customization of
 	 * the workbench.
-	 * 
+	 *
 	 * @since 3.0
 	 */
 	private WorkbenchAdvisor advisor;
@@ -405,7 +424,7 @@ public final class Workbench extends EventManager implements IWorkbench,
 	/**
 	 * Object for configuring the workbench. Lazily initialized to an instance
 	 * unique to the workbench instance.
-	 * 
+	 *
 	 * @since 3.0
 	 */
 	private WorkbenchConfigurer workbenchConfigurer;
@@ -441,7 +460,7 @@ public final class Workbench extends EventManager implements IWorkbench,
 	/**
 	 * Listener list for registered IWorkbenchListeners .
 	 */
-	private ListenerList workbenchListeners = new ListenerList(ListenerList.IDENTITY);
+	private ListenerList<IWorkbenchListener> workbenchListeners = new ListenerList<>(ListenerList.IDENTITY);
 
 	private ServiceRegistration workbenchService;
 
@@ -450,6 +469,8 @@ public final class Workbench extends EventManager implements IWorkbench,
 	private IEclipseContext e4Context;
 
 	private IEventBroker eventBroker;
+
+	private IExtensionRegistry registry;
 
 	boolean initializationDone = false;
 
@@ -462,9 +483,10 @@ public final class Workbench extends EventManager implements IWorkbench,
 	private String id;
 	private ServiceRegistration<?> e4WorkbenchService;
 
+
 	/**
 	 * Creates a new workbench.
-	 * 
+	 *
 	 * @param display
 	 *            the display to be used for all UI interactions with the
 	 *            workbench
@@ -473,8 +495,7 @@ public final class Workbench extends EventManager implements IWorkbench,
 	 *            specializes this workbench instance
 	 * @since 3.0
 	 */
-	private Workbench(Display display, final WorkbenchAdvisor advisor, MApplication app,
-			IEclipseContext appContext) {
+	private Workbench(Display display, final WorkbenchAdvisor advisor, MApplication app, IEclipseContext appContext) {
 		super();
 		this.id = createId();
 		StartupThreading.setWorkbench(this);
@@ -488,10 +509,11 @@ public final class Workbench extends EventManager implements IWorkbench,
 		application = app;
 		e4Context = appContext;
 		Workbench.instance = this;
-		eventBroker = (IEventBroker) e4Context.get(IEventBroker.class.getName());
+		eventBroker = e4Context.get(IEventBroker.class);
+		registry = e4Context.get(IExtensionRegistry.class);
 
 		appContext.set(getClass().getName(), this);
-		appContext.set(IWorkbench.class.getName(), this);
+		appContext.set(IWorkbench.class, this);
 		appContext.set(IEventLoopAdvisor.class, new IEventLoopAdvisor() {
 			@Override
 			public void eventLoopIdle(Display display) {
@@ -519,7 +541,7 @@ public final class Workbench extends EventManager implements IWorkbench,
 		// dialog is
 		// to show the user a nice dialog describing the addition.]
 		extensionEventHandler = new ExtensionEventHandler(this);
-		Platform.getExtensionRegistry().addRegistryChangeListener(extensionEventHandler);
+		registry.addRegistryChangeListener(extensionEventHandler);
 		IServiceLocatorCreator slc = new ServiceLocatorCreator();
 		serviceLocator = (ServiceLocator) slc.createServiceLocator(null, null, new IDisposable() {
 			@Override
@@ -541,12 +563,16 @@ public final class Workbench extends EventManager implements IWorkbench,
 
 	/**
 	 * Returns the one and only instance of the workbench, if there is one.
-	 * 
+	 *
 	 * @return the workbench, or <code>null</code> if the workbench has not been
 	 *         created, or has been created and already completed
 	 */
 	public static final Workbench getInstance() {
 		return instance;
+	}
+
+	private static boolean isFirstE4WorkbenchRun(MApplication app) {
+		return app.getContext().containsKey(E4Workbench.NO_SAVED_MODEL_FOUND);
 	}
 
 	/**
@@ -560,7 +586,7 @@ public final class Workbench extends EventManager implements IWorkbench,
 	 * <p>
 	 * The display passed in must be the default display.
 	 * </p>
-	 * 
+	 *
 	 * @param display
 	 *            the display to be used for all UI interactions with the
 	 *            workbench
@@ -573,10 +599,9 @@ public final class Workbench extends EventManager implements IWorkbench,
 	 *         {@link IWorkbench#restart IWorkbench.restart}; other values
 	 *         reserved for future use
 	 */
-	public static final int createAndRunWorkbench(final Display display,
-			final WorkbenchAdvisor advisor) {
+	public static final int createAndRunWorkbench(final Display display, final WorkbenchAdvisor advisor) {
 		final int[] returnCode = new int[1];
-		Realm.runWithDefault(SWTObservables.getRealm(display), new Runnable() {
+		Realm.runWithDefault(DisplayRealm.getRealm(display), new Runnable() {
 			@Override
 			public void run() {
 				final String nlExtensions = Platform.getNLExtensions();
@@ -598,8 +623,29 @@ public final class Workbench extends EventManager implements IWorkbench,
 
 				if (obj instanceof E4Application) {
 					E4Application e4app = (E4Application) obj;
-					E4Workbench e4Workbench = e4app.createE4Workbench(getApplicationContext(),
-							display);
+					E4Workbench e4Workbench = e4app.createE4Workbench(getApplicationContext(), display);
+
+					MApplication appModel = e4Workbench.getApplication();
+					IEclipseContext context = e4Workbench.getContext();
+
+					WorkbenchMigrationProcessor migrationProcessor = null;
+					try {
+						migrationProcessor = ContextInjectionFactory.make(WorkbenchMigrationProcessor.class, context);
+					} catch (@SuppressWarnings("restriction") InjectionException e) {
+						WorkbenchPlugin.log(e);
+					}
+
+					if (migrationProcessor != null && isFirstE4WorkbenchRun(appModel)
+							&& migrationProcessor.isLegacyWorkbenchDetected()) {
+						try {
+							WorkbenchPlugin
+									.log(StatusUtil.newStatus(IStatus.INFO, "Workbench migration started", null)); //$NON-NLS-1$
+							migrationProcessor.migrate();
+						} catch (Exception e) {
+							WorkbenchPlugin.log("Workbench migration failed", e); //$NON-NLS-1$
+							migrationProcessor.restoreDefaultModel();
+						}
+					}
 
 					// create the workbench instance
 					Workbench workbench = new Workbench(display, advisor, e4Workbench
@@ -615,6 +661,7 @@ public final class Workbench extends EventManager implements IWorkbench,
 									IWorkbenchPreferenceConstants.SHOW_PROGRESS_ON_STARTUP);
 
 					IProgressMonitor progressMonitor = null;
+					SynchronousBundleListener bundleListener = null;
 					if (handler != null && showProgress) {
 						progressMonitor = handler.getBundleProgressMonitor();
 						if (progressMonitor != null) {
@@ -622,28 +669,43 @@ public final class Workbench extends EventManager implements IWorkbench,
 							int expectedProgressCount = Math.max(1, WorkbenchPlugin.getDefault()
 									.getBundleCount() / 10);
 							progressMonitor.beginTask("", expectedProgressCount); //$NON-NLS-1$
-							SynchronousBundleListener bundleListener = workbench.new StartupProgressBundleListener(
+							bundleListener = workbench.new StartupProgressBundleListener(
 									progressMonitor, (int) (expectedProgressCount * cutoff));
 							WorkbenchPlugin.getDefault().addBundleListener(bundleListener);
 						}
 					}
-					MApplication appModel = e4Workbench.getApplication();
 					setSearchContribution(appModel, true);
 					// run the legacy workbench once
 					returnCode[0] = workbench.runUI();
+					if (migrationProcessor != null && migrationProcessor.isWorkbenchMigrated()) {
+						migrationProcessor.updatePartsAfterMigration(
+								WorkbenchPlugin.getDefault().getPerspectiveRegistry(),
+								WorkbenchPlugin.getDefault().getViewRegistry());
+						WorkbenchPlugin.log(StatusUtil.newStatus(IStatus.INFO, "Workbench migration finished", null)); //$NON-NLS-1$
+					}
+
 					if (returnCode[0] == PlatformUI.RETURN_OK) {
 						// run the e4 event loop and instantiate ... well, stuff
+						if (bundleListener != null) {
+							WorkbenchPlugin.getDefault().removeBundleListener(bundleListener);
+						}
 						e4Workbench.createAndRunUI(e4Workbench.getApplication());
-						WorkbenchMenuService wms = (WorkbenchMenuService) e4Workbench.getContext()
-								.get(IMenuService.class);
+						IMenuService wms = e4Workbench.getContext().get(IMenuService.class);
 						wms.dispose();
 					}
 					if (returnCode[0] != PlatformUI.RETURN_UNSTARTABLE) {
 						setSearchContribution(appModel, false);
 						e4app.saveModel();
 					}
-					e4Workbench.close();
-					returnCode[0] = workbench.returnCode;
+
+					// if a restart was triggered via E4Workbench the return
+					// code needs to be set appropriately
+					if (e4Workbench.isRestart()) {
+						returnCode[0] = PlatformUI.RETURN_RESTART;
+					} else {
+						e4Workbench.close();
+						returnCode[0] = workbench.returnCode;
+					}
 				}
 			}
 		});
@@ -705,7 +767,7 @@ public final class Workbench extends EventManager implements IWorkbench,
 
 	/**
 	 * Creates the <code>Display</code> to be used by the workbench.
-	 * 
+	 *
 	 * @return the display
 	 */
 	public static Display createDisplay() {
@@ -747,7 +809,7 @@ public final class Workbench extends EventManager implements IWorkbench,
 
 	/**
 	 * Create the splash wrapper and set it to work.
-	 * 
+	 *
 	 * @since 3.3
 	 */
 	private void createSplashWrapper() {
@@ -782,7 +844,7 @@ public final class Workbench extends EventManager implements IWorkbench,
 				}
 
 				Dictionary properties = new Hashtable();
-				properties.put(Constants.SERVICE_RANKING, new Integer(Integer.MAX_VALUE));
+				properties.put(Constants.SERVICE_RANKING, Integer.valueOf(Integer.MAX_VALUE));
 				BundleContext context = WorkbenchPlugin.getDefault().getBundleContext();
 				final ServiceRegistration registration[] = new ServiceRegistration[1];
 				StartupMonitor startupMonitor = new StartupMonitor() {
@@ -811,19 +873,11 @@ public final class Workbench extends EventManager implements IWorkbench,
 						// for this to be relevant
 					}
 				};
-				registration[0] = context.registerService(StartupMonitor.class.getName(),
-						startupMonitor, properties);
+				registration[0] = context.registerService(StartupMonitor.class.getName(), startupMonitor, properties);
 
 				splash.init(splashShell);
 			}
 
-			/*
-			 * (non-Javadoc)
-			 * 
-			 * @see
-			 * org.eclipse.jface.util.SafeRunnable#handleException(java.lang
-			 * .Throwable)
-			 */
 			@Override
 			public void handleException(Throwable e) {
 				StatusManager.getManager().handle(
@@ -841,7 +895,7 @@ public final class Workbench extends EventManager implements IWorkbench,
 
 	/**
 	 * Load an image from a filesystem path.
-	 * 
+	 *
 	 * @param splashLoc
 	 *            the location to load from
 	 * @return the image or <code>null</code>
@@ -876,7 +930,7 @@ public final class Workbench extends EventManager implements IWorkbench,
 	/**
 	 * Return the splash handler for this application. If none is specifically
 	 * provided the default Eclipse implementation is returned.
-	 * 
+	 *
 	 * @return the splash handler for this application or <code>null</code>
 	 * @since 3.3
 	 */
@@ -898,7 +952,7 @@ public final class Workbench extends EventManager implements IWorkbench,
 
 	/**
 	 * Returns the testable object facade, for use by the test harness.
-	 * 
+	 *
 	 * @return the testable object facade
 	 * @since 3.0
 	 */
@@ -909,21 +963,11 @@ public final class Workbench extends EventManager implements IWorkbench,
 		return testableObject;
 	}
 
-	/*
-	 * (non-Javadoc) Method declared on IWorkbench.
-	 * 
-	 * @since 3.2
-	 */
 	@Override
 	public void addWorkbenchListener(IWorkbenchListener listener) {
 		workbenchListeners.add(listener);
 	}
 
-	/*
-	 * (non-Javadoc) Method declared on IWorkbench.
-	 * 
-	 * @since 3.2
-	 */
 	@Override
 	public void removeWorkbenchListener(IWorkbenchListener listener) {
 		workbenchListeners.remove(listener);
@@ -931,7 +975,7 @@ public final class Workbench extends EventManager implements IWorkbench,
 
 	/**
 	 * Fire workbench preShutdown event, stopping at the first one to veto
-	 * 
+	 *
 	 * @param forced
 	 *            flag indicating whether the shutdown is being forced
 	 * @return <code>true</code> to allow the workbench to proceed with
@@ -939,9 +983,7 @@ public final class Workbench extends EventManager implements IWorkbench,
 	 * @since 3.2
 	 */
 	boolean firePreShutdown(final boolean forced) {
-		Object list[] = workbenchListeners.getListeners();
-		for (int i = 0; i < list.length; i++) {
-			final IWorkbenchListener l = (IWorkbenchListener) list[i];
+		for (final IWorkbenchListener l : workbenchListeners) {
 			final boolean[] result = new boolean[] { false };
 			SafeRunnable.run(new SafeRunnable() {
 				@Override
@@ -958,13 +1000,11 @@ public final class Workbench extends EventManager implements IWorkbench,
 
 	/**
 	 * Fire workbench postShutdown event.
-	 * 
+	 *
 	 * @since 3.2
 	 */
 	void firePostShutdown() {
-		Object list[] = workbenchListeners.getListeners();
-		for (int i = 0; i < list.length; i++) {
-			final IWorkbenchListener l = (IWorkbenchListener) list[i];
+		for (final IWorkbenchListener l : workbenchListeners) {
 			SafeRunnable.run(new SafeRunnable() {
 				@Override
 				public void run() {
@@ -974,17 +1014,11 @@ public final class Workbench extends EventManager implements IWorkbench,
 		}
 	}
 
-	/*
-	 * (non-Javadoc) Method declared on IWorkbench.
-	 */
 	@Override
 	public void addWindowListener(IWindowListener l) {
 		addListenerObject(l);
 	}
 
-	/*
-	 * (non-Javadoc) Method declared on IWorkbench.
-	 */
 	@Override
 	public void removeWindowListener(IWindowListener l) {
 		removeListenerObject(l);
@@ -992,14 +1026,14 @@ public final class Workbench extends EventManager implements IWorkbench,
 
 	/**
 	 * Fire window opened event.
-	 * 
+	 *
 	 * @param window
 	 *            The window which just opened; should not be <code>null</code>.
 	 */
 	protected void fireWindowOpened(final IWorkbenchWindow window) {
 		Object list[] = getListeners();
-		for (int i = 0; i < list.length; i++) {
-			final IWindowListener l = (IWindowListener) list[i];
+		for (Object element : list) {
+			final IWindowListener l = (IWindowListener) element;
 			SafeRunner.run(new SafeRunnable() {
 				@Override
 				public void run() {
@@ -1011,14 +1045,14 @@ public final class Workbench extends EventManager implements IWorkbench,
 
 	/**
 	 * Fire window closed event.
-	 * 
+	 *
 	 * @param window
 	 *            The window which just closed; should not be <code>null</code>.
 	 */
 	protected void fireWindowClosed(final IWorkbenchWindow window) {
 		Object list[] = getListeners();
-		for (int i = 0; i < list.length; i++) {
-			final IWindowListener l = (IWindowListener) list[i];
+		for (Object element : list) {
+			final IWindowListener l = (IWindowListener) element;
 			SafeRunner.run(new SafeRunnable() {
 				@Override
 				public void run() {
@@ -1030,15 +1064,15 @@ public final class Workbench extends EventManager implements IWorkbench,
 
 	/**
 	 * Fire window activated event.
-	 * 
+	 *
 	 * @param window
 	 *            The window which was just activated; should not be
 	 *            <code>null</code>.
 	 */
 	protected void fireWindowActivated(final IWorkbenchWindow window) {
 		Object list[] = getListeners();
-		for (int i = 0; i < list.length; i++) {
-			final IWindowListener l = (IWindowListener) list[i];
+		for (Object element : list) {
+			final IWindowListener l = (IWindowListener) element;
 			SafeRunner.run(new SafeRunnable() {
 				@Override
 				public void run() {
@@ -1050,15 +1084,15 @@ public final class Workbench extends EventManager implements IWorkbench,
 
 	/**
 	 * Fire window deactivated event.
-	 * 
+	 *
 	 * @param window
 	 *            The window which was just deactivated; should not be
 	 *            <code>null</code>.
 	 */
 	protected void fireWindowDeactivated(final IWorkbenchWindow window) {
 		Object list[] = getListeners();
-		for (int i = 0; i < list.length; i++) {
-			final IWindowListener l = (IWindowListener) list[i];
+		for (Object element : list) {
+			final IWindowListener l = (IWindowListener) element;
 			SafeRunner.run(new SafeRunnable() {
 				@Override
 				public void run() {
@@ -1070,7 +1104,7 @@ public final class Workbench extends EventManager implements IWorkbench,
 
 	/**
 	 * Closes the workbench. Assumes that the busy cursor is active.
-	 * 
+	 *
 	 * @param force
 	 *            true if the close is mandatory, and false if the close is
 	 *            allowed to fail
@@ -1098,7 +1132,7 @@ public final class Workbench extends EventManager implements IWorkbench,
 		if (!force && !isClosing) {
 			return false;
 		}
-		
+
 		// stop the workbench auto-save job so it can't conflict with shutdown
 		if(autoSaveJob != null) {
 			autoSaveJob.cancel();
@@ -1113,10 +1147,10 @@ public final class Workbench extends EventManager implements IWorkbench,
 				@Override
 				public void run() {
 					IWorkbenchWindow windows[] = getWorkbenchWindows();
-					for (int i = 0; i < windows.length; i++) {
-						IWorkbenchPage pages[] = windows[i].getPages();
-						for (int j = 0; j < pages.length; j++) {
-							isClosing = isClosing && pages[j].closeAllEditors(false);
+					for (IWorkbenchWindow window : windows) {
+						IWorkbenchPage pages[] = window.getPages();
+						for (IWorkbenchPage page : pages) {
+							isClosing = isClosing && page.closeAllEditors(false);
 						}
 					}
 				}
@@ -1178,7 +1212,7 @@ public final class Workbench extends EventManager implements IWorkbench,
 	 * Saves the state of the workbench in the same way that closing the it
 	 * would. Can be called while the editor is running so that if it crashes
 	 * the workbench state can be recovered.
-	 * 
+	 *
 	 * @param shutdown
 	 *            If true, will close any editors that cannot be persisted. Will
 	 *            also skip saving the model to the disk since that is done
@@ -1190,12 +1224,12 @@ public final class Workbench extends EventManager implements IWorkbench,
 			@Override
 			public void run() {
 				IWorkbenchWindow windows[] = getWorkbenchWindows();
-				for (int i = 0; i < windows.length; i++) {
-					IWorkbenchPage pages[] = windows[i].getPages();
-					for (int j = 0; j < pages.length; j++) {
-						List<EditorReference> editorReferences = ((WorkbenchPage) pages[j])
+				for (IWorkbenchWindow window : windows) {
+					IWorkbenchPage pages[] = window.getPages();
+					for (IWorkbenchPage page : pages) {
+						List<EditorReference> editorReferences = ((WorkbenchPage) page)
 								.getInternalEditorReferences();
-						List<EditorReference> referencesToClose = new ArrayList<EditorReference>();
+						List<EditorReference> referencesToClose = new ArrayList<>();
 						for (EditorReference reference : editorReferences) {
 							IEditorPart editor = reference.getEditor(false);
 							if (editor != null && !reference.persist() && shutdown) {
@@ -1204,7 +1238,7 @@ public final class Workbench extends EventManager implements IWorkbench,
 						}
 						if (shutdown) {
 							for (EditorReference reference : referencesToClose) {
-								((WorkbenchPage) pages[j]).closeEditor(reference);
+								((WorkbenchPage) page).closeEditor(reference);
 							}
 						}
 					}
@@ -1241,13 +1275,13 @@ public final class Workbench extends EventManager implements IWorkbench,
 			@Override
 			public void run() {
 				IWorkbenchWindow windows[] = getWorkbenchWindows();
-				for (int i = 0; i < windows.length; i++) {
-					IWorkbenchPage pages[] = windows[i].getPages();
-					for (int j = 0; j < pages.length; j++) {
-						IViewReference[] references = pages[j].getViewReferences();
-						for (int k = 0; k < references.length; k++) {
-							if (references[k].getView(false) != null) {
-								((ViewReference) references[k]).persist();
+				for (IWorkbenchWindow window : windows) {
+					IWorkbenchPage pages[] = window.getPages();
+					for (IWorkbenchPage page : pages) {
+						IViewReference[] references = page.getViewReferences();
+						for (IViewReference reference : references) {
+							if (reference.getView(false) != null) {
+								((ViewReference) reference).persist();
 							}
 						}
 					}
@@ -1279,13 +1313,16 @@ public final class Workbench extends EventManager implements IWorkbench,
 	 * part of persist(false) during auto-save.
 	 */
 	private void persistWorkbenchModel() {
+		if (Job.getJobManager().find(WORKBENCH_AUTO_SAVE_JOB).length > 0) {
+			return;
+		}
 		final MApplication appCopy = (MApplication) EcoreUtil.copy((EObject) application);
 		if (detectWorkbenchCorruption(appCopy)) {
 			return;
 		}
 		final IModelResourceHandler handler = e4Context.get(IModelResourceHandler.class);
 
-		Job cleanAndSaveJob = new Job("Workbench Auto-Save Background Job") { //$NON-NLS-1$
+		Job cleanAndSaveJob = new Job(WORKBENCH_AUTO_SAVE_BACKGROUND_JOB) {
 			@Override
 			protected IStatus run(IProgressMonitor monitor) {
 				final Resource res = handler.createResourceWithApp(appCopy);
@@ -1301,6 +1338,11 @@ public final class Workbench extends EventManager implements IWorkbench,
 					res.getResourceSet().getResources().remove(res);
 				}
 				return Status.OK_STATUS;
+			}
+
+			@Override
+			public boolean belongsTo(Object family) {
+				return WORKBENCH_AUTO_SAVE_JOB.equals(family);
 			}
 
 		};
@@ -1350,31 +1392,33 @@ public final class Workbench extends EventManager implements IWorkbench,
 		element.getPendingCleanup().clear();
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.ui.IWorkbench#saveAllEditors(boolean)
-	 */
 	@Override
 	public boolean saveAllEditors(boolean confirm) {
 		return saveAllEditors(confirm, false);
 	}
 
 	private boolean saveAllEditors(boolean confirm, boolean closing) {
-		for (IWorkbenchWindow window : getWorkbenchWindows()) {
-			IWorkbenchPage page = window.getActivePage();
+		IWorkbenchWindow[] windows = getWorkbenchWindows();
+		if (windows.length == 0) {
+			return true;
+		}
+
+		Set<IWorkbenchPart> dirtyParts = new HashSet<>();
+		for (IWorkbenchWindow window : windows) {
+			WorkbenchPage page = (WorkbenchPage) window.getActivePage();
 			if (page != null) {
-				if (!((WorkbenchPage) page).saveAllEditors(confirm, closing, false)) {
-					return false;
-				}
+				Collections.addAll(dirtyParts, page.getDirtyWorkbenchParts());
 			}
 		}
-		return true;
+
+		IWorkbenchWindow activeWindow = getActiveWorkbenchWindow();
+		if (activeWindow == null) {
+			activeWindow = windows[0];
+		}
+		return WorkbenchPage.saveAll(new ArrayList<>(dirtyParts),
+				confirm, closing, true, activeWindow, activeWindow);
 	}
 
-	/*
-	 * (non-Javadoc) Method declared on IWorkbench.
-	 */
 	@Override
 	public boolean close() {
 		return close(PlatformUI.RETURN_OK, false);
@@ -1383,7 +1427,7 @@ public final class Workbench extends EventManager implements IWorkbench,
 	/**
 	 * Closes the workbench, returning the given return code from the run
 	 * method. If forced, the workbench is closed no matter what.
-	 * 
+	 *
 	 * @param returnCode
 	 *            {@link PlatformUI#RETURN_OK RETURN_OK}for normal exit;
 	 *            {@link PlatformUI#RETURN_RESTART RETURN_RESTART}if the
@@ -1393,7 +1437,7 @@ public final class Workbench extends EventManager implements IWorkbench,
 	 *            shutdown {@link PlatformUI#RETURN_UNSTARTABLE
 	 *            RETURN_UNSTARTABLE}if the workbench could not be started;
 	 *            other values reserved for future use
-	 * 
+	 *
 	 * @param force
 	 *            true to force the workbench close, and false for a "soft"
 	 *            close that can be canceled
@@ -1413,9 +1457,6 @@ public final class Workbench extends EventManager implements IWorkbench,
 		return ret[0];
 	}
 
-	/*
-	 * (non-Javadoc) Method declared on IWorkbench.
-	 */
 	@Override
 	public IWorkbenchWindow getActiveWorkbenchWindow() {
 		// Return null if called from a non-UI thread.
@@ -1440,16 +1481,22 @@ public final class Workbench extends EventManager implements IWorkbench,
 		}
 
 		MWindow activeWindow = application.getSelectedElement();
-		if (activeWindow == null && !application.getChildren().isEmpty()) {
+		if ((activeWindow == null || activeWindow.getWidget() == null) && !application.getChildren().isEmpty()) {
 			activeWindow = application.getChildren().get(0);
 		}
 
 		// We can't return a window with no widget...it's in the process
 		// of closing...see Bug 379717
-		if (activeWindow != null && activeWindow.getWidget() == null) {
+		if (activeWindow == null || (activeWindow != null && activeWindow.getWidget() == null)) {
 			return null;
 		}
 
+		// search for existing IWorkbenchWindow
+		IWorkbenchWindow iWorkbenchWindow = activeWindow.getContext().get(IWorkbenchWindow.class);
+		if (iWorkbenchWindow != null) {
+			return iWorkbenchWindow;
+		}
+		// otherwise create new IWorkbenchWindow instance
 		return createWorkbenchWindow(getDefaultPageInput(), getPerspectiveRegistry()
 				.findPerspectiveWithId(getPerspectiveRegistry().getDefaultPerspective()),
 				activeWindow, false);
@@ -1457,13 +1504,12 @@ public final class Workbench extends EventManager implements IWorkbench,
 
 	IWorkbenchWindow createWorkbenchWindow(IAdaptable input, IPerspectiveDescriptor descriptor,
 			MWindow window, boolean newWindow) {
+
 		IEclipseContext windowContext = window.getContext();
 		if (windowContext == null) {
-			windowContext = E4Workbench.initializeContext(
-					e4Context, window);
+			windowContext = E4Workbench.initializeContext(e4Context, window);
 		}
-		WorkbenchWindow result = (WorkbenchWindow) windowContext.get(IWorkbenchWindow.class
-				.getName());
+		WorkbenchWindow result = (WorkbenchWindow) windowContext.get(IWorkbenchWindow.class);
 		if (result == null) {
 			if (windowBeingCreated != null)
 				return windowBeingCreated;
@@ -1478,7 +1524,7 @@ public final class Workbench extends EventManager implements IWorkbench,
 					application.setSelectedElement(window);
 				}
 				ContextInjectionFactory.inject(result, windowContext);
-				windowContext.set(IWorkbenchWindow.class.getName(), result);
+				windowContext.set(IWorkbenchWindow.class, result);
 			} finally {
 				windowBeingCreated = null;
 			}
@@ -1504,49 +1550,31 @@ public final class Workbench extends EventManager implements IWorkbench,
 		return editorHistory;
 	}
 
-	/*
-	 * (non-Javadoc) Method declared on IWorkbench.
-	 */
 	@Override
 	public IEditorRegistry getEditorRegistry() {
 		return WorkbenchPlugin.getDefault().getEditorRegistry();
 	}
 
-	/*
-	 * (non-Javadoc) Method declared on IWorkbench.
-	 */
 	@Override
 	public IWorkbenchOperationSupport getOperationSupport() {
 		return WorkbenchPlugin.getDefault().getOperationSupport();
 	}
 
-	/*
-	 * (non-Javadoc) Method declared on IWorkbench.
-	 */
 	@Override
 	public IPerspectiveRegistry getPerspectiveRegistry() {
 		return WorkbenchPlugin.getDefault().getPerspectiveRegistry();
 	}
 
-	/*
-	 * (non-Javadoc) Method declared on IWorkbench.
-	 */
 	@Override
 	public PreferenceManager getPreferenceManager() {
 		return WorkbenchPlugin.getDefault().getPreferenceManager();
 	}
 
-	/*
-	 * (non-Javadoc) Method declared on IWorkbench.
-	 */
 	@Override
 	public IPreferenceStore getPreferenceStore() {
 		return WorkbenchPlugin.getDefault().getPreferenceStore();
 	}
 
-	/*
-	 * (non-Javadoc) Method declared on IWorkbench.
-	 */
 	@Override
 	public ISharedImages getSharedImages() {
 		return WorkbenchPlugin.getDefault().getSharedImages();
@@ -1554,20 +1582,14 @@ public final class Workbench extends EventManager implements IWorkbench,
 
 
 
-	/*
-	 * (non-Javadoc) Method declared on IWorkbench.
-	 */
 	@Override
 	public int getWorkbenchWindowCount() {
 		return getWorkbenchWindows().length;
 	}
 
-	/*
-	 * (non-Javadoc) Method declared on IWorkbench.
-	 */
 	@Override
 	public IWorkbenchWindow[] getWorkbenchWindows() {
-		List<IWorkbenchWindow> windows = new ArrayList<IWorkbenchWindow>();
+		List<IWorkbenchWindow> windows = new ArrayList<>();
 		for (MWindow window : application.getChildren()) {
 			IEclipseContext context = window.getContext();
 			if (context != null) {
@@ -1581,9 +1603,6 @@ public final class Workbench extends EventManager implements IWorkbench,
 		return windows.toArray(new IWorkbenchWindow[windows.size()]);
 	}
 
-	/*
-	 * (non-Javadoc) Method declared on IWorkbench.
-	 */
 	@Override
 	public IWorkingSetManager getWorkingSetManager() {
 		return WorkbenchPlugin.getDefault().getWorkingSetManager();
@@ -1599,7 +1618,7 @@ public final class Workbench extends EventManager implements IWorkbench,
 
 	/**
 	 * Initializes the workbench now that the display is created.
-	 * 
+	 *
 	 * @return true if init succeeded.
 	 */
 	private boolean init() {
@@ -1722,7 +1741,7 @@ public final class Workbench extends EventManager implements IWorkbench,
 	}
 
 	/**
-	 * 
+	 *
 	 */
 	private void initializeWorkbenchImages() {
 		StartupThreading.runWithoutExceptions(new StartupRunnable() {
@@ -1756,7 +1775,7 @@ public final class Workbench extends EventManager implements IWorkbench,
 	/**
 	 * Initialize colors defined by the new colorDefinitions extension point.
 	 * Note this will be rolled into initializeColors() at some point.
-	 * 
+	 *
 	 * @since 3.0
 	 */
 	private void initializeApplicationColors() {
@@ -1823,18 +1842,44 @@ public final class Workbench extends EventManager implements IWorkbench,
 
 				ThemeElementHelper.populateRegistry(getThemeManager().getCurrentTheme(),
 						fontDefinitions, PrefUtil.getInternalPreferenceStore());
+				final IPropertyChangeListener themeToPreferencesFontSynchronizer = new IPropertyChangeListener() {
+					@Override
+					public void propertyChange(PropertyChangeEvent event) {
+						if (event.getNewValue() instanceof FontData[]) {
+							FontData[] fontData = (FontData[]) event.getNewValue();
+							PrefUtil.getInternalPreferenceStore().setValue(event.getProperty(),
+									PreferenceConverter.getStoredRepresentation(fontData));
+						}
+					}
+				};
+				getThemeManager().getCurrentTheme().getFontRegistry().addListener(themeToPreferencesFontSynchronizer);
+				getThemeManager().addPropertyChangeListener(new IPropertyChangeListener() {
+					@Override
+					public void propertyChange(PropertyChangeEvent event) {
+						if (IThemeManager.CHANGE_CURRENT_THEME.equals(event.getProperty())) {
+							Object oldValue = event.getOldValue();
+							if (oldValue != null && oldValue instanceof ITheme) {
+								((ITheme) oldValue).removePropertyChangeListener(themeToPreferencesFontSynchronizer);
+							}
+							Object newValue = event.getNewValue();
+							if (newValue != null && newValue instanceof ITheme) {
+								((ITheme) newValue).addPropertyChangeListener(themeToPreferencesFontSynchronizer);
+							}
+						}
+					}
+				});
 			}
 		});
 	}
 
 	/*
 	 * Initialize the workbench images.
-	 * 
+	 *
 	 * @param windowImages An array of the descriptors of the images to be used
 	 * in the corner of each window, or <code>null</code> if none. It is
 	 * expected that the array will contain the same icon, rendered at different
 	 * sizes.
-	 * 
+	 *
 	 * @since 3.0
 	 */
 	private static void initializeImages() {
@@ -1852,21 +1897,21 @@ public final class Workbench extends EventManager implements IWorkbench,
 
 	/*
 	 * Take the workbenches' images out of the shared registry.
-	 * 
+	 *
 	 * @since 3.0
 	 */
 	private void uninitializeImages() {
 		WorkbenchImages.dispose();
 		Image[] images = Window.getDefaultImages();
 		Window.setDefaultImage(null);
-		for (int i = 0; i < images.length; i++) {
-			images[i].dispose();
+		for (Image image : images) {
+			image.dispose();
 		}
 	}
 
 	/*
 	 * Initialize the workbench colors.
-	 * 
+	 *
 	 * @since 3.0
 	 */
 	private void initializeColors() {
@@ -1878,9 +1923,6 @@ public final class Workbench extends EventManager implements IWorkbench,
 		});
 	}
 
-	/*
-	 * (non-Javadoc) Method declared on IWorkbench.
-	 */
 	@Override
 	public boolean isClosing() {
 		return isClosing;
@@ -1918,8 +1960,7 @@ public final class Workbench extends EventManager implements IWorkbench,
 							MWindow window = (MWindow) removed;
 							IEclipseContext windowContext = window.getContext();
 							if (windowContext != null) {
-								IWorkbenchWindow wwindow = (IWorkbenchWindow) windowContext
-										.get(IWorkbenchWindow.class.getName());
+								IWorkbenchWindow wwindow = windowContext.get(IWorkbenchWindow.class);
 								if (wwindow != null) {
 									fireWindowClosed(wwindow);
 								}
@@ -1937,8 +1978,7 @@ public final class Workbench extends EventManager implements IWorkbench,
 							.getProperty(UIEvents.EventTags.TYPE))) {
 						MWindow window = (MWindow) event.getProperty(UIEvents.EventTags.NEW_VALUE);
 						if (window != null) {
-							IWorkbenchWindow wwindow = (IWorkbenchWindow) window.getContext().get(
-									IWorkbenchWindow.class.getName());
+							IWorkbenchWindow wwindow = window.getContext().get(IWorkbenchWindow.class);
 							if (wwindow != null) {
 								e4Context.set(ISources.ACTIVE_WORKBENCH_WINDOW_NAME, wwindow);
 								e4Context.set(ISources.ACTIVE_WORKBENCH_WINDOW_SHELL_NAME,
@@ -1984,7 +2024,7 @@ UIEvents.Context.TOPIC_CONTEXT,
 						}
 					}
 				});
-		
+
 		eventBroker.subscribe(UIEvents.ElementContainer.TOPIC_CHILDREN, new EventHandler() {
 			@Override
 			public void handleEvent(org.osgi.service.event.Event event) {
@@ -2030,28 +2070,28 @@ UIEvents.Context.TOPIC_CONTEXT,
 	/**
 	 * Returns a workbench page that will contain the specified part. If no page
 	 * can be located, one will be instantiated.
-	 * 
+	 *
 	 * @param part
 	 *            the model part to query a parent workbench page for
 	 * @return the workbench page that contains the specified part
 	 */
 	private WorkbenchPage getWorkbenchPage(MPart part) {
 		IEclipseContext context = getWindowContext(part);
-		WorkbenchPage page = (WorkbenchPage) context.get(IWorkbenchPage.class.getName());
+		WorkbenchPage page = (WorkbenchPage) context.get(IWorkbenchPage.class);
 		if (page == null) {
-			MWindow window = (MWindow) context.get(MWindow.class.getName());
+			MWindow window = context.get(MWindow.class);
 			Workbench workbench = (Workbench) PlatformUI.getWorkbench();
 			workbench.openWorkbenchWindow(getDefaultPageInput(), getPerspectiveRegistry()
 					.findPerspectiveWithId(getDefaultPerspectiveId()),
 					window, false);
-			page = (WorkbenchPage) context.get(IWorkbenchPage.class.getName());
+			page = (WorkbenchPage) context.get(IWorkbenchPage.class);
 		}
 		return page;
 	}
 
 	/**
 	 * Sets the 3.x reference of the specified part into its context.
-	 * 
+	 *
 	 * @param part
 	 *            the model part that requires a 3.x part reference
 	 * @param context
@@ -2066,8 +2106,7 @@ UIEvents.Context.TOPIC_CONTEXT,
 				// If this editor was cloned from an existing editor (as
 				// part of a split...) then re-create a valid EditorReference
 				// from the existing editor's ref.
-				MPart clonedFrom = (MPart) part.getTransientData().get(
-						EModelService.CLONED_FROM_KEY);
+				MPart clonedFrom = (MPart) part.getTransientData().get(EModelService.CLONED_FROM_KEY);
 				if (clonedFrom != null && clonedFrom.getContext() != null) {
 					EditorReference originalRef = page.getEditorReference(clonedFrom);
 					if (originalRef != null) {
@@ -2087,7 +2126,7 @@ UIEvents.Context.TOPIC_CONTEXT,
 					ref = createEditorReference(part, page);
 				}
 			}
-			context.set(EditorReference.class.getName(), ref);
+			context.set(EditorReference.class, ref);
 		} else {
 			// Create View References for 'e4' parts as well
 			WorkbenchPage page = getWorkbenchPage(part);
@@ -2095,7 +2134,7 @@ UIEvents.Context.TOPIC_CONTEXT,
 			if (ref == null) {
 				ref = createViewReference(part, page);
 			}
-			context.set(ViewReference.class.getName(), ref);
+			context.set(ViewReference.class, ref);
 		}
 	}
 
@@ -2128,7 +2167,7 @@ UIEvents.Context.TOPIC_CONTEXT,
 	/**
 	 * Creates a workbench part reference for the specified part if one does not
 	 * already exist.
-	 * 
+	 *
 	 * @param part
 	 *            the model part to create a 3.x part reference for
 	 */
@@ -2188,19 +2227,19 @@ UIEvents.Context.TOPIC_CONTEXT,
 		WorkbenchPlugin.getDefault().initializeContext(e4Context);
 	}
 
-	private ArrayList<MCommand> commandsToRemove = new ArrayList<MCommand>();
-	private ArrayList<MCategory> categoriesToRemove = new ArrayList<MCategory>();
+	private ArrayList<MCommand> commandsToRemove = new ArrayList<>();
+	private ArrayList<MCategory> categoriesToRemove = new ArrayList<>();
 
 	private CommandService initializeCommandService(IEclipseContext appContext) {
 		CommandService service = new CommandService(commandManager, appContext);
-		appContext.set(ICommandService.class.getName(), service);
+		appContext.set(ICommandService.class, service);
 		appContext.set(IUpdateService.class, service);
 		service.readRegistry();
 
 		return service;
 	}
 
-	private Map<String, MBindingContext> bindingContexts = new HashMap<String, MBindingContext>();
+	private Map<String, MBindingContext> bindingContexts = new HashMap<>();
 
 	public MBindingContext getBindingContext(String id) {
 		// cache
@@ -2279,7 +2318,7 @@ UIEvents.Context.TOPIC_CONTEXT,
 		// TODO Correctly order service initialization
 		// there needs to be some serious consideration given to
 		// the services, and hooking them up in the correct order
-		final IEvaluationService evaluationService = (IEvaluationService) serviceLocator
+		final IEvaluationService evaluationService = serviceLocator
 				.getService(IEvaluationService.class);
 
 		StartupThreading.runWithoutExceptions(new StartupRunnable() {
@@ -2324,8 +2363,7 @@ UIEvents.Context.TOPIC_CONTEXT,
 			}
 		});
 
-		IContextService cxs = (IContextService) ContextInjectionFactory.make(ContextService.class,
-				e4Context);
+		IContextService cxs = ContextInjectionFactory.make(ContextService.class, e4Context);
 
 		final IContextService contextService = cxs;
 
@@ -2439,7 +2477,7 @@ UIEvents.Context.TOPIC_CONTEXT,
 			@Override
 			public void runWithException() {
 				handlerService[0] = new LegacyHandlerService(e4Context);
-				e4Context.set(IHandlerService.class.getName(), handlerService[0]);
+				e4Context.set(IHandlerService.class, handlerService[0]);
 				handlerService[0].readRegistry();
 			}
 		});
@@ -2481,7 +2519,7 @@ UIEvents.Context.TOPIC_CONTEXT,
 					return;
 				}
 
-				final IHandlerService handlerService = (IHandlerService) getService(IHandlerService.class);
+				final IHandlerService handlerService = getService(IHandlerService.class);
 
 				try {
 					handlerService.executeCommand(commandId, event);
@@ -2501,60 +2539,13 @@ UIEvents.Context.TOPIC_CONTEXT,
 
 	/**
 	 * Returns true if the Workbench is in the process of starting.
-	 * 
+	 *
 	 * @return <code>true</code> if the Workbench is starting, but not yet
 	 *         running the event loop.
 	 */
 	@Override
 	public boolean isStarting() {
 		return isStarting && isRunning();
-	}
-
-	/*
-	 * If a perspective was specified on the command line (-perspective) then
-	 * force that perspective to open in the active window.
-	 */
-	void forceOpenPerspective() {
-		if (getWorkbenchWindowCount() == 0) {
-			// there should be an open window by now, bail out.
-			return;
-		}
-
-		String perspId = null;
-		String[] commandLineArgs = Platform.getCommandLineArgs();
-		for (int i = 0; i < commandLineArgs.length - 1; i++) {
-			if (commandLineArgs[i].equalsIgnoreCase("-perspective")) { //$NON-NLS-1$
-				perspId = commandLineArgs[i + 1];
-				break;
-			}
-		}
-		if (perspId == null) {
-			return;
-		}
-		IPerspectiveDescriptor desc = getPerspectiveRegistry().findPerspectiveWithId(perspId);
-		if (desc == null) {
-			return;
-		}
-
-		IWorkbenchWindow win = getActiveWorkbenchWindow();
-		if (win == null) {
-			win = getWorkbenchWindows()[0];
-		}
-
-		final String threadPerspId = perspId;
-		final IWorkbenchWindow threadWin = win;
-		StartupThreading.runWithoutExceptions(new StartupRunnable() {
-			@Override
-			public void runWithException() throws Throwable {
-				try {
-					showPerspective(threadPerspId, threadWin);
-				} catch (WorkbenchException e) {
-					String msg = "Workbench exception showing specified command line perspective on startup."; //$NON-NLS-1$
-					WorkbenchPlugin.log(msg, new Status(IStatus.ERROR, PlatformUI.PLUGIN_ID, 0,
-							msg, e));
-				}
-			}
-		});
 	}
 
 	/**
@@ -2640,17 +2631,11 @@ UIEvents.Context.TOPIC_CONTEXT,
 		}
 	}
 
-	/*
-	 * (non-Javadoc) Method declared on IWorkbench.
-	 */
 	@Override
 	public IWorkbenchWindow openWorkbenchWindow(IAdaptable input) throws WorkbenchException {
 		return openWorkbenchWindow(getDefaultPerspectiveId(), input);
 	}
 
-	/*
-	 * (non-Javadoc) Method declared on IWorkbench.
-	 */
 	@Override
 	public IWorkbenchWindow openWorkbenchWindow(String perspectiveId, IAdaptable input)
 			throws WorkbenchException {
@@ -2669,36 +2654,129 @@ UIEvents.Context.TOPIC_CONTEXT,
 		return (WorkbenchWindow) createWorkbenchWindow(input, descriptor, window, newWindow);
 	}
 
-	/*
-	 * (non-Javadoc) Method declared on IWorkbench.
-	 */
 	@Override
 	public boolean restart() {
 		return close(PlatformUI.RETURN_RESTART, false);
 	}
 
+	@Override
+	public boolean restart(boolean useCurrrentWorkspace) {
+		if (useCurrrentWorkspace) {
+			URL instanceUrl = Platform.getInstanceLocation().getURL();
+			if (instanceUrl != null) {
+				try {
+					URI uri = instanceUrl.toURI();
+					String command_line = buildCommandLine(uri.toString());
+					if (command_line != null) {
+						System.setProperty(PROP_EXIT_CODE, IApplication.EXIT_RELAUNCH.toString());
+						System.setProperty(IApplicationContext.EXIT_DATA_PROPERTY, command_line);
+					}
+				} catch (URISyntaxException e) {
+					// do nothing; workbench will be restarted with the same
+					// command line as used for the previous launch
+				}
+			}
+		}
+		return close(PlatformUI.RETURN_RESTART, false);
+	}
 
+	/**
+	 * Create and return a string with command line options for eclipse.exe that
+	 * will launch a new workbench that is the same as the currently running
+	 * one, but using the argument directory as its workspace.
+	 * <p>
+	 * Note that this method has been copied from
+	 * OpenWorkspaceAction.buildCommandLine(String workspace)
+	 * </p>
+	 *
+	 * @param workspace
+	 *            the directory to use as the new workspace
+	 * @return a string of command line options or <code>null</code> if
+	 *         'eclipse.vm' is not set
+	 */
+	private String buildCommandLine(String workspace) {
+		String property = System.getProperty(PROP_VM);
+		if (property == null) {
+			if (!Platform.inDevelopmentMode()) {
+				// Don't log this when in development mode, since 'eclipse.vm'
+				// is never set in this case
+				WorkbenchPlugin.log(NLS.bind(WorkbenchMessages.Workbench_missingPropertyMessage, PROP_VM));
+			}
+			return null;
+		}
+
+		StringBuffer result = new StringBuffer(512);
+		result.append(property);
+		result.append('\n');
+
+		// append the vmargs and commands. Assume that these already end in \n
+		String vmargs = System.getProperty(PROP_VMARGS);
+		if (vmargs != null) {
+			result.append(vmargs);
+		}
+
+		// append the rest of the args, replacing or adding -data as required
+		property = System.getProperty(PROP_COMMANDS);
+		if (property == null) {
+			result.append(CMD_DATA);
+			result.append('\n');
+			result.append(workspace);
+			result.append('\n');
+		} else {
+			// find the index of the arg to add/replace its value
+			int cmd_data_pos = property.lastIndexOf(CMD_DATA);
+			if (cmd_data_pos != -1) {
+				cmd_data_pos += CMD_DATA.length() + 1;
+				result.append(property.substring(0, cmd_data_pos));
+				result.append(workspace);
+				// append from the next arg
+				int nextArg = property.indexOf("\n-", cmd_data_pos - 1); //$NON-NLS-1$
+				if (nextArg != -1) {
+					result.append(property.substring(nextArg));
+				}
+			} else {
+				result.append(CMD_DATA);
+				result.append('\n');
+				result.append(workspace);
+				result.append('\n');
+				result.append(property);
+			}
+		}
+
+		// put the vmargs back at the very end (the eclipse.commands property
+		// already contains the -vm arg)
+		if (vmargs != null) {
+			if (result.charAt(result.length() - 1) != '\n') {
+				result.append('\n');
+			}
+			result.append(CMD_VMARGS);
+			result.append('\n');
+			result.append(vmargs);
+		}
+
+		return result.toString();
+	}
 
 	/**
 	 * Returns the ids of all plug-ins that extend the
 	 * <code>org.eclipse.ui.startup</code> extension point.
-	 * 
+	 *
 	 * @return the ids of all plug-ins containing 1 or more startup extensions
 	 */
 	public ContributionInfo[] getEarlyActivatedPlugins() {
-		IExtensionPoint point = Platform.getExtensionRegistry().getExtensionPoint(
-				PlatformUI.PLUGIN_ID, IWorkbenchRegistryConstants.PL_STARTUP);
+		IExtensionPoint point = registry
+				.getExtensionPoint(PlatformUI.PLUGIN_ID, IWorkbenchRegistryConstants.PL_STARTUP);
 		IExtension[] extensions = point.getExtensions();
-		ArrayList pluginIds = new ArrayList(extensions.length);
-		for (int i = 0; i < extensions.length; i++) {
-			String id = extensions[i].getNamespace();
+		ArrayList<String> pluginIds = new ArrayList<>(extensions.length);
+		for (IExtension extension : extensions) {
+			String id = extension.getNamespaceIdentifier();
 			if (!pluginIds.contains(id)) {
 				pluginIds.add(id);
 			}
 		}
 		ContributionInfo[] result = new ContributionInfo[pluginIds.size()];
 		for (int i = 0; i < result.length; i++) {
-			result[i] = new ContributionInfo((String) pluginIds.get(i),
+			result[i] = new ContributionInfo(pluginIds.get(i),
 					ContributionInfoMessages.ContributionInfo_EarlyStartupPlugin, null);
 
 		}
@@ -2708,7 +2786,7 @@ UIEvents.Context.TOPIC_CONTEXT,
 	/**
 	 * Returns the ids of the early activated plug-ins that have been disabled
 	 * by the user.
-	 * 
+	 *
 	 * @return the ids of the early activated plug-ins that have been disabled
 	 *         by the user
 	 */
@@ -2724,8 +2802,6 @@ UIEvents.Context.TOPIC_CONTEXT,
 	 * page.
 	 */
 	private void startPlugins() {
-		IExtensionRegistry registry = Platform.getExtensionRegistry();
-
 		// bug 55901: don't use getConfigElements directly, for pre-3.0
 		// compat, make sure to allow both missing class
 		// attribute and a missing startup element
@@ -2742,16 +2818,15 @@ UIEvents.Context.TOPIC_CONTEXT,
 				HashSet disabledPlugins = new HashSet(Arrays
 						.asList(getDisabledEarlyActivatedPlugins()));
 				monitor.beginTask(WorkbenchMessages.Workbench_startingPlugins, extensions.length);
-				for (int i = 0; i < extensions.length; ++i) {
+				for (IExtension extension : extensions) {
 					if (monitor.isCanceled() || !isRunning()) {
 						return Status.CANCEL_STATUS;
 					}
-					IExtension extension = extensions[i];
 
 					// if the plugin is not in the set of disabled plugins, then
 					// execute the code to start it
-					if (!disabledPlugins.contains(extension.getNamespace())) {
-						monitor.subTask(extension.getNamespace());
+					if (!disabledPlugins.contains(extension.getNamespaceIdentifier())) {
+						monitor.subTask(extension.getNamespaceIdentifier());
 						SafeRunner.run(new EarlyStartupRunnable(extension));
 					}
 					monitor.worked(1);
@@ -2771,7 +2846,7 @@ UIEvents.Context.TOPIC_CONTEXT,
 
 	/**
 	 * Disable the Workbench Auto-Save job on startup during tests.
-	 * 
+	 *
 	 * @param b
 	 *            <code>false</code> to disable the tests.
 	 */
@@ -2779,12 +2854,10 @@ UIEvents.Context.TOPIC_CONTEXT,
 		workbenchAutoSave = b;
 	}
 
-	private volatile boolean initDone = false;
-
 	/**
 	 * Internal method for running the workbench UI. This entails processing and
 	 * dispatching events until the workbench is closed or restarted.
-	 * 
+	 *
 	 * @return return code {@link PlatformUI#RETURN_OK RETURN_OK}for normal
 	 *         exit; {@link PlatformUI#RETURN_RESTART RETURN_RESTART}if the
 	 *         workbench was terminated with a call to
@@ -2801,8 +2874,8 @@ UIEvents.Context.TOPIC_CONTEXT,
 		boolean avoidDeadlock = true;
 
 		String[] commandLineArgs = Platform.getCommandLineArgs();
-		for (int i = 0; i < commandLineArgs.length; i++) {
-			if (commandLineArgs[i].equalsIgnoreCase("-allowDeadlock")) { //$NON-NLS-1$
+		for (String commandLineArg : commandLineArgs) {
+			if (commandLineArg.equalsIgnoreCase("-allowDeadlock")) { //$NON-NLS-1$
 				avoidDeadlock = false;
 			}
 		}
@@ -2862,69 +2935,12 @@ UIEvents.Context.TOPIC_CONTEXT,
 
 			final boolean[] initOK = new boolean[1];
 
-			if (getSplash() != null) {
-
-				final Throwable[] error = new Throwable[1];
-				Thread initThread = new Thread() {
-					/*
-					 * (non-Javadoc)
-					 * 
-					 * @see java.lang.Thread#run()
-					 */
-					@Override
-					public void run() {
-						try {
-							// declare us to be a startup thread so that our
-							// syncs will be executed
-							UISynchronizer.startupThread.set(Boolean.TRUE);
-							initOK[0] = Workbench.this.init();
-						} catch (Throwable e) {
-							error[0] = e;
-						} finally {
-							initDone = true;
-							yield();
-							try {
-								Thread.sleep(5);
-							} catch (InterruptedException e) {
-								// this is a no-op in this case.
-							}
-							display.wake();
-						}
-					}
-				};
-				initThread.start();
-				while (true) {
-					if (!display.readAndDispatch()) {
-						if (initDone)
-							break;
-						display.sleep();
-					}
-				}
-				Throwable throwable = error[0];
-				if (throwable != null) {
-					if (throwable instanceof Error)
-						throw (Error) throwable;
-					if (throwable instanceof Exception)
-						throw (Exception) throwable;
-
-					// how very exotic - something that isn't playing by the
-					// rules. Wrap it in an error and bail
-					throw new Error(throwable);
-				}
-			} else {
-				// initialize workbench and restore or open one window
-				initOK[0] = init();
-
-			}
-
-			// let the advisor run its start up code
-			if (initOK[0]) {
-				advisor.postStartup(); // may trigger a close/restart
-			}
+			// initialize workbench and restore or open one window
+			initOK[0] = init();
 
 			if (initOK[0] && runEventLoop) {
 				// Same registration as in E4Workbench
-				Hashtable<String, Object> properties = new Hashtable<String, Object>();
+				Hashtable<String, Object> properties = new Hashtable<>();
 				properties.put("id", getId()); //$NON-NLS-1$
 
 				workbenchService = WorkbenchPlugin.getDefault().getBundleContext()
@@ -2937,6 +2953,8 @@ UIEvents.Context.TOPIC_CONTEXT,
 				Runnable earlyStartup = new Runnable() {
 					@Override
 					public void run() {
+						// Let the advisor run its start-up code.
+						advisor.postStartup(); // May trigger a close/restart.
 						// start eager plug-ins
 						startPlugins();
 						addStartupRegistryListener();
@@ -2965,17 +2983,6 @@ UIEvents.Context.TOPIC_CONTEXT,
 							return Status.OK_STATUS;
 						}
 
-						/*
-						 * (non-Javadoc)
-						 * 
-						 * @see
-						 * org.eclipse.core.runtime.jobs.Job#belongsTo(java.
-						 * lang.Object)
-						 */
-						@Override
-						public boolean belongsTo(Object family) {
-							return WORKBENCH_AUTO_SAVE_JOB == family;
-						}
 					};
 					autoSaveJob.setSystem(true);
 					autoSaveJob.schedule(millisecondInterval);
@@ -3029,9 +3036,6 @@ UIEvents.Context.TOPIC_CONTEXT,
 
 
 
-	/*
-	 * (non-Javadoc) Method declared on IWorkbench.
-	 */
 	@Override
 	public IWorkbenchPage showPerspective(String perspectiveId, IWorkbenchWindow window)
 			throws WorkbenchException {
@@ -3055,9 +3059,6 @@ UIEvents.Context.TOPIC_CONTEXT,
 		return false;
 	}
 
-	/*
-	 * (non-Javadoc) Method declared on IWorkbench.
-	 */
 	@Override
 	public IWorkbenchPage showPerspective(String perspectiveId, IWorkbenchWindow targetWindow,
 			IAdaptable input) throws WorkbenchException {
@@ -3130,8 +3131,8 @@ UIEvents.Context.TOPIC_CONTEXT,
 		e4WorkbenchService = null;
 
 		// for dynamic UI
-		Platform.getExtensionRegistry().removeRegistryChangeListener(extensionEventHandler);
-		Platform.getExtensionRegistry().removeRegistryChangeListener(startupRegistryListener);
+		registry.removeRegistryChangeListener(extensionEventHandler);
+		registry.removeRegistryChangeListener(startupRegistryListener);
 
 		((GrabFocus) Tweaklets.get(GrabFocus.KEY)).dispose();
 
@@ -3172,9 +3173,6 @@ UIEvents.Context.TOPIC_CONTEXT,
 		// which would hang. See bug 94537 for rationale.
 	}
 
-	/*
-	 * (non-Javadoc) Method declared on IWorkbench.
-	 */
 	@Override
 	public IDecoratorManager getDecoratorManager() {
 		return WorkbenchPlugin.getDefault().getDecoratorManager();
@@ -3212,9 +3210,6 @@ UIEvents.Context.TOPIC_CONTEXT,
 		return advisor;
 	}
 
-	/*
-	 * (non-Javadoc) Method declared on IWorkbench.
-	 */
 	@Override
 	public Display getDisplay() {
 		return display;
@@ -3222,7 +3217,7 @@ UIEvents.Context.TOPIC_CONTEXT,
 
 	/**
 	 * Returns the default perspective id, which may be <code>null</code>.
-	 * 
+	 *
 	 * @return the default perspective id, or <code>null</code>
 	 */
 	public String getDefaultPerspectiveId() {
@@ -3231,7 +3226,7 @@ UIEvents.Context.TOPIC_CONTEXT,
 
 	/**
 	 * Returns the default workbench window page input.
-	 * 
+	 *
 	 * @return the default window page input or <code>null</code> if none
 	 */
 	public IAdaptable getDefaultPageInput() {
@@ -3241,7 +3236,7 @@ UIEvents.Context.TOPIC_CONTEXT,
 	/**
 	 * Returns the id of the preference page that should be presented most
 	 * prominently.
-	 * 
+	 *
 	 * @return the id of the preference page, or <code>null</code> if none
 	 */
 	public String getMainPreferencePageId() {
@@ -3249,27 +3244,15 @@ UIEvents.Context.TOPIC_CONTEXT,
 		return id;
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.ui.IWorkbench
-	 * 
-	 * @since 3.0
-	 */
 	@Override
 	public IElementFactory getElementFactory(String factoryId) {
 		Assert.isNotNull(factoryId);
 		return WorkbenchPlugin.getDefault().getElementFactory(factoryId);
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.ui.IWorkbench#getProgressService()
-	 */
 	@Override
 	public IProgressService getProgressService() {
-		return (IProgressService) e4Context.get(IProgressService.class.getName());
+		return e4Context.get(IProgressService.class);
 	}
 
 	private WorkbenchActivitySupport workbenchActivitySupport;
@@ -3283,7 +3266,7 @@ UIEvents.Context.TOPIC_CONTEXT,
 	 * initialized in <code>Workbench.init(Display)</code> and then never
 	 * changed. This value will only be <code>null</code> if the initialization
 	 * call has not yet completed.
-	 * 
+	 *
 	 * @since 3.1
 	 */
 	private BindingManager bindingManager;
@@ -3293,7 +3276,7 @@ UIEvents.Context.TOPIC_CONTEXT,
 	 * initialized in <code>Workbench.init(Display)</code> and then never
 	 * changed. This value will only be <code>null</code> if the initialization
 	 * call has not yet completed.
-	 * 
+	 *
 	 * @since 3.1
 	 */
 	private CommandManager commandManager;
@@ -3303,14 +3286,14 @@ UIEvents.Context.TOPIC_CONTEXT,
 	 * initialized in <code>Workbench.init(Display)</code> and then never
 	 * changed. This value will only be <code>null</code> if the initialization
 	 * call has not yet completed.
-	 * 
+	 *
 	 * @since 3.1
 	 */
 	private ContextManager contextManager;
 
 	@Override
 	public IWorkbenchActivitySupport getActivitySupport() {
-		return (IWorkbenchActivitySupport) e4Context.get(IWorkbenchActivitySupport.class.getName());
+		return e4Context.get(IWorkbenchActivitySupport.class);
 	}
 
 	@Override
@@ -3321,15 +3304,6 @@ UIEvents.Context.TOPIC_CONTEXT,
 	@Override
 	public IWorkbenchContextSupport getContextSupport() {
 		return workbenchContextSupport;
-	}
-
-	/**
-	 * This method should not be called outside the framework.
-	 * 
-	 * @return The context manager.
-	 */
-	public ContextManager getContextManager() {
-		return contextManager;
 	}
 
 	private final IBindingManagerListener bindingManagerListener = new IBindingManagerListener() {
@@ -3365,11 +3339,6 @@ UIEvents.Context.TOPIC_CONTEXT,
 
 	private ActivityPersistanceHelper activityHelper;
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.ui.IWorkbench#getIntroManager()
-	 */
 	@Override
 	public IIntroManager getIntroManager() {
 		return getWorkbenchIntroManager();
@@ -3390,7 +3359,7 @@ UIEvents.Context.TOPIC_CONTEXT,
 
 	/**
 	 * @return the intro extension for this workbench.
-	 * 
+	 *
 	 * @since 3.0
 	 */
 	public IntroDescriptor getIntroDescriptor() {
@@ -3400,7 +3369,7 @@ UIEvents.Context.TOPIC_CONTEXT,
 	/**
 	 * This method exists as a test hook. This method should
 	 * <strong>NEVER</strong> be called by clients.
-	 * 
+	 *
 	 * @param descriptor
 	 *            The intro descriptor to use.
 	 * @since 3.0
@@ -3422,13 +3391,6 @@ UIEvents.Context.TOPIC_CONTEXT,
 
 	private IRegistryChangeListener startupRegistryListener = new IRegistryChangeListener() {
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see
-		 * org.eclipse.core.runtime.IRegistryChangeListener#registryChanged(
-		 * org.eclipse.core.runtime.IRegistryChangeEvent)
-		 */
 		@Override
 		public void registryChanged(IRegistryChangeEvent event) {
 			final IExtensionDelta[] deltas = event.getExtensionDeltas(PlatformUI.PLUGIN_ID,
@@ -3439,16 +3401,16 @@ UIEvents.Context.TOPIC_CONTEXT,
 			final String disabledPlugins = PrefUtil.getInternalPreferenceStore().getString(
 					IPreferenceConstants.PLUGINS_NOT_ACTIVATED_ON_STARTUP);
 
-			for (int i = 0; i < deltas.length; i++) {
-				IExtension extension = deltas[i].getExtension();
-				if (deltas[i].getKind() == IExtensionDelta.REMOVED) {
+			for (IExtensionDelta delta : deltas) {
+				IExtension extension = delta.getExtension();
+				if (delta.getKind() == IExtensionDelta.REMOVED) {
 					continue;
 				}
 
 				// if the plugin is not in the set of disabled plugins,
 				// then
 				// execute the code to start it
-				if (disabledPlugins.indexOf(extension.getNamespace()) == -1) {
+				if (disabledPlugins.indexOf(extension.getNamespaceIdentifier()) == -1) {
 					SafeRunner.run(new EarlyStartupRunnable(extension));
 				}
 			}
@@ -3456,13 +3418,6 @@ UIEvents.Context.TOPIC_CONTEXT,
 		}
 	};
 
-	private String factoryID;
-
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.ui.IWorkbench#getThemeManager()
-	 */
 	@Override
 	public IThemeManager getThemeManager() {
 		return WorkbenchThemeManager.getInstance();
@@ -3471,36 +3426,12 @@ UIEvents.Context.TOPIC_CONTEXT,
 	/**
 	 * Returns <code>true</code> if the workbench is running, <code>false</code>
 	 * if it has been terminated.
-	 * 
+	 *
 	 * @return <code>true</code> if the workbench is running, <code>false</code>
 	 *         if it has been terminated.
 	 */
 	public boolean isRunning() {
 		return runEventLoop;
-	}
-
-	/**
-	 * Return the presentation ID specified by the preference or the default ID
-	 * if undefined.
-	 * 
-	 * @return the presentation ID
-	 * @see IWorkbenchPreferenceConstants#PRESENTATION_FACTORY_ID
-	 */
-	public String getPresentationId() {
-		if (factoryID != null) {
-			return factoryID;
-		}
-
-		factoryID = PrefUtil.getAPIPreferenceStore().getString(
-				IWorkbenchPreferenceConstants.PRESENTATION_FACTORY_ID);
-
-		// Workaround for bug 58975 - New preference mechanism does not properly
-		// initialize defaults
-		// Ensure that the UI plugin has started too.
-		if (factoryID == null || factoryID.equals("")) { //$NON-NLS-1$
-			factoryID = IWorkbenchConstants.DEFAULT_PRESENTATION_ID;
-		}
-		return factoryID;
 	}
 
 	/**
@@ -3517,13 +3448,8 @@ UIEvents.Context.TOPIC_CONTEXT,
 	 */
 	public final void largeUpdateStart() {
 		if (largeUpdates++ == 0) {
-			// TODO Consider whether these lines still need to be here.
-			// workbenchCommandSupport.setProcessing(false);
-			// workbenchContextSupport.setProcessing(false);
-
 			final IWorkbenchWindow[] windows = getWorkbenchWindows();
-			for (int i = 0; i < windows.length; i++) {
-				IWorkbenchWindow window = windows[i];
+			for (IWorkbenchWindow window : windows) {
 				if (window instanceof WorkbenchWindow) {
 					((WorkbenchWindow) window).largeUpdateStart();
 				}
@@ -3545,14 +3471,10 @@ UIEvents.Context.TOPIC_CONTEXT,
 	 */
 	public final void largeUpdateEnd() {
 		if (--largeUpdates == 0) {
-			// TODO Consider whether these lines still need to be here.
-			// workbenchCommandSupport.setProcessing(true);
-			// workbenchContextSupport.setProcessing(true);
 
 			// Perform window-specific blocking.
 			final IWorkbenchWindow[] windows = getWorkbenchWindows();
-			for (int i = 0; i < windows.length; i++) {
-				IWorkbenchWindow window = windows[i];
+			for (IWorkbenchWindow window : windows) {
 				if (window instanceof WorkbenchWindow) {
 					((WorkbenchWindow) window).largeUpdateEnd();
 				}
@@ -3560,109 +3482,63 @@ UIEvents.Context.TOPIC_CONTEXT,
 		}
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.ui.IWorkbench#getExtensionTracker()
-	 */
 	@Override
 	public IExtensionTracker getExtensionTracker() {
-		return (IExtensionTracker) e4Context.get(IExtensionTracker.class.getName());
+		return e4Context.get(IExtensionTracker.class);
 	}
 
 	/**
 	 * Adds the listener that handles startup plugins
-	 * 
+	 *
 	 * @since 3.1
 	 */
 	private void addStartupRegistryListener() {
-		IExtensionRegistry registry = Platform.getExtensionRegistry();
 		registry.addRegistryChangeListener(startupRegistryListener);
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.ui.IWorkbench#getHelpSystem()
-	 */
 	@Override
 	public IWorkbenchHelpSystem getHelpSystem() {
 		return WorkbenchHelpSystem.getInstance();
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.ui.IWorkbench#getHelpSystem()
-	 */
 	@Override
 	public IWorkbenchBrowserSupport getBrowserSupport() {
 		return WorkbenchBrowserSupport.getInstance();
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.ui.IWorkbench#getViewRegistry()
-	 */
 	@Override
 	public IViewRegistry getViewRegistry() {
 		return WorkbenchPlugin.getDefault().getViewRegistry();
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.ui.IWorkbench#getNewWizardRegistry()
-	 */
 	@Override
 	public IWizardRegistry getNewWizardRegistry() {
 		return WorkbenchPlugin.getDefault().getNewWizardRegistry();
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.ui.IWorkbench#getImportWizardRegistry()
-	 */
 	@Override
 	public IWizardRegistry getImportWizardRegistry() {
 		return WorkbenchPlugin.getDefault().getImportWizardRegistry();
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.ui.IWorkbench#getExportWizardRegistry()
-	 */
 	@Override
 	public IWizardRegistry getExportWizardRegistry() {
 		return WorkbenchPlugin.getDefault().getExportWizardRegistry();
 	}
 
 	@Override
-	public final Object getAdapter(final Class key) {
-		return serviceLocator.getService(key);
+	public final <T> T getAdapter(final Class<T> key) {
+		return key.cast(serviceLocator.getService(key));
 	}
 
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.ui.services.IServiceLocator#getService(java.lang.Object)
-	 */
 	@Override
-	public final Object getService(final Class key) {
+	public final <T> T getService(final Class<T> key) {
 		return serviceLocator.getService(key);
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.ui.services.IServiceLocator#hasService(java.lang.Object)
-	 */
 	@Override
-	public final boolean hasService(final Class key) {
+	public final boolean hasService(final Class<?> key) {
 		return serviceLocator.hasService(key);
 	}
 
@@ -3670,7 +3546,7 @@ UIEvents.Context.TOPIC_CONTEXT,
 	 * Registers a service with this locator. If there is an existing service
 	 * matching the same <code>api</code> and it implements {@link IDisposable},
 	 * it will be disposed.
-	 * 
+	 *
 	 * @param api
 	 *            This is the interface that the service implements. Must not be
 	 *            <code>null</code>.
@@ -3693,7 +3569,7 @@ UIEvents.Context.TOPIC_CONTEXT,
 	 * Adds the ids of a menu that is now showing to the menu source provider.
 	 * This is used for legacy action-based handlers which need to become active
 	 * only for the duration of a menu being visible.
-	 * 
+	 *
 	 * @param menuIds
 	 *            The identifiers of the menu that is now showing; must not be
 	 *            <code>null</code>.
@@ -3713,7 +3589,7 @@ UIEvents.Context.TOPIC_CONTEXT,
 	 * Removes the ids of a menu that is now hidden from the menu source
 	 * provider. This is used for legacy action-based handlers which need to
 	 * become active only for the duration of a menu being visible.
-	 * 
+	 *
 	 * @param menuIds
 	 *            The identifiers of the menu that is now hidden; must not be
 	 *            <code>null</code>.
@@ -3728,14 +3604,6 @@ UIEvents.Context.TOPIC_CONTEXT,
 		}
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see
-	 * org.eclipse.ui.IWorkbench#saveAll(org.eclipse.jface.window.IShellProvider
-	 * , org.eclipse.jface.operation.IRunnableContext,
-	 * org.eclipse.ui.ISaveableFilter, boolean)
-	 */
 	@Override
 	public boolean saveAll(final IShellProvider shellProvider,
 			final IRunnableContext runnableContext, final ISaveableFilter filter, boolean confirm) {
@@ -3758,18 +3626,16 @@ UIEvents.Context.TOPIC_CONTEXT,
 	 * Apply the given filter to the list of saveables
 	 */
 	private List<Saveable> getFilteredSaveables(ISaveableFilter filter, Saveable[] saveables) {
-		List<Saveable> toSave = new ArrayList<Saveable>();
+		List<Saveable> toSave = new ArrayList<>();
 		if (filter == null) {
-			for (int i = 0; i < saveables.length; i++) {
-				Saveable saveable = saveables[i];
+			for (Saveable saveable : saveables) {
 				if (saveable.isDirty()) {
 					toSave.add(saveable);
 				}
 			}
 		} else {
 			SaveablesList saveablesList = (SaveablesList) getService(ISaveablesLifecycleListener.class);
-			for (int i = 0; i < saveables.length; i++) {
-				Saveable saveable = saveables[i];
+			for (Saveable saveable : saveables) {
 				if (saveable.isDirty()) {
 					IWorkbenchPart[] parts = saveablesList.getPartsForSaveable(saveable);
 					if (matchesFilter(filter, saveable, parts)) {
@@ -3788,15 +3654,6 @@ UIEvents.Context.TOPIC_CONTEXT,
 		return filter == null || filter.select(saveable, parts);
 	}
 
-	public ServiceLocator getServiceLocator() {
-		return serviceLocator;
-	}
-
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.ui.IWorkbench#getModalDialogShellProvider()
-	 */
 	@Override
 	public IShellProvider getModalDialogShellProvider() {
 		return new IShellProvider() {
