@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2008, 2009 Matthew Hall and others.
+ * Copyright (c) 2008, 2014 Matthew Hall and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -8,6 +8,7 @@
  * Contributors:
  *     Matthew Hall - initial API and implementation (bug 218269)
  *     Matthew Hall - bug 260329
+ *     Simon Scholz <simon.scholz@vogella.com> - Bug 442278, 434283
  ******************************************************************************/
 
 package org.eclipse.jface.examples.databinding.snippets;
@@ -24,7 +25,8 @@ import org.eclipse.core.databinding.observable.value.WritableValue;
 import org.eclipse.core.databinding.validation.MultiValidator;
 import org.eclipse.core.databinding.validation.ValidationStatus;
 import org.eclipse.core.runtime.IStatus;
-import org.eclipse.jface.databinding.swt.SWTObservables;
+import org.eclipse.jface.databinding.swt.DisplayRealm;
+import org.eclipse.jface.databinding.swt.WidgetProperties;
 import org.eclipse.jface.databinding.viewers.ObservableListContentProvider;
 import org.eclipse.jface.databinding.wizard.WizardPageSupport;
 import org.eclipse.jface.dialogs.IInputValidator;
@@ -51,7 +53,7 @@ import org.eclipse.swt.widgets.Text;
 
 /**
  * @since 3.2
- * 
+ *
  */
 public class Snippet021MultiFieldValidation extends WizardPage {
 
@@ -79,7 +81,7 @@ public class Snippet021MultiFieldValidation extends WizardPage {
 
 	/**
 	 * Create contents of the wizard
-	 * 
+	 *
 	 * @param parent
 	 */
 	@Override
@@ -204,14 +206,12 @@ public class Snippet021MultiFieldValidation extends WizardPage {
 	}
 
 	private void bindEvensAndOddsGroup(DataBindingContext dbc) {
-		IObservableValue targetField1 = SWTObservables.observeText(
-				field1Target, SWT.Modify);
+		IObservableValue targetField1 = WidgetProperties.text(SWT.Modify).observe(field1Target);
 		final IObservableValue middleField1 = new WritableValue(null,
 				Integer.TYPE);
 		dbc.bindValue(targetField1, middleField1);
 
-		IObservableValue targetField2 = SWTObservables.observeText(
-				field2Target, SWT.Modify);
+		IObservableValue targetField2 = WidgetProperties.text(SWT.Modify).observe(field2Target);
 		final IObservableValue middleField2 = new WritableValue(null,
 				Integer.TYPE);
 		dbc.bindValue(targetField2, middleField2);
@@ -230,24 +230,23 @@ public class Snippet021MultiFieldValidation extends WizardPage {
 		};
 		dbc.addValidationStatusProvider(validator);
 
-		IObservableValue modelField1 = new WritableValue(new Integer(1),
+		IObservableValue modelField1 = new WritableValue(Integer.valueOf(1),
 				Integer.TYPE);
-		IObservableValue modelField2 = new WritableValue(new Integer(4),
+		IObservableValue modelField2 = new WritableValue(Integer.valueOf(4),
 				Integer.TYPE);
 		dbc.bindValue(validator.observeValidatedValue(middleField1),
 				modelField1);
 		dbc.bindValue(validator.observeValidatedValue(middleField2),
 				modelField2);
 
-		dbc.bindValue(SWTObservables.observeText(field1ModelValue, SWT.Modify),
+		dbc.bindValue(WidgetProperties.text(SWT.Modify).observe(field1ModelValue),
 				modelField1);
-		dbc.bindValue(SWTObservables.observeText(field2ModelValue, SWT.Modify),
+		dbc.bindValue(WidgetProperties.text(SWT.Modify).observe(field2ModelValue),
 				modelField2);
 	}
 
 	private void bindSumAndAddendsGroup(DataBindingContext dbc) {
-		IObservableValue targetSum = SWTObservables.observeText(sumTarget,
-				SWT.Modify);
+		IObservableValue targetSum = WidgetProperties.text(SWT.Modify).observe(sumTarget);
 		final IObservableValue middleSum = new WritableValue(null, Integer.TYPE);
 		dbc.bindValue(targetSum, middleSum);
 
@@ -283,16 +282,15 @@ public class Snippet021MultiFieldValidation extends WizardPage {
 		removeAddendButton.addSelectionListener(new SelectionAdapter() {
 			@Override
 			public void widgetSelected(SelectionEvent e) {
-				IStructuredSelection selection = (IStructuredSelection) addendsTarget
-						.getSelection();
+				IStructuredSelection selection = addendsTarget.getStructuredSelection();
 				if (!selection.isEmpty())
 					targetAddends.remove(selection.getFirstElement());
 			}
 		});
 
-		IObservableValue modelSum = new WritableValue(new Integer(5),
+		IObservableValue modelSum = new WritableValue(Integer.valueOf(5),
 				Integer.TYPE);
-		dbc.bindValue(SWTObservables.observeText(sumModelValue, SWT.Modify),
+		dbc.bindValue(WidgetProperties.text(SWT.Modify).observe(sumModelValue),
 				modelSum);
 
 		IObservableList modelAddends = new WritableList(new ArrayList(),
@@ -344,7 +342,7 @@ public class Snippet021MultiFieldValidation extends WizardPage {
 	public static void main(String[] args) {
 		Display display = new Display();
 
-		Realm.runWithDefault(SWTObservables.getRealm(display), new Runnable() {
+		Realm.runWithDefault(DisplayRealm.getRealm(display), new Runnable() {
 			@Override
 			public void run() {
 				IWizard wizard = new MultiFieldValidationWizard();
