@@ -17,6 +17,7 @@ import org.eclipse.core.databinding.observable.IDecoratingObservable;
 import org.eclipse.core.databinding.property.IPropertyObservable;
 import org.eclipse.jface.databinding.conformance.util.ChangeEventTracker;
 import org.eclipse.jface.databinding.conformance.util.RealmTester;
+import org.eclipse.jface.databinding.swt.DisplayRealm;
 import org.eclipse.jface.databinding.swt.ISWTObservable;
 import org.eclipse.jface.databinding.swt.ISWTObservableList;
 import org.eclipse.jface.databinding.swt.ISWTObservableValue;
@@ -97,24 +98,24 @@ import org.eclipse.swt.widgets.Widget;
 public class SWTObservablesTest extends AbstractSWTTestCase {
 	private Shell shell;
 
+	@Override
 	protected void setUp() throws Exception {
 		super.setUp();
 
 		shell = getShell();
-		RealmTester.setDefault(SWTObservables.getRealm(shell.getDisplay()));
+		RealmTester.setDefault(DisplayRealm.getRealm(shell.getDisplay()));
 	}
 
+	@Override
 	protected void tearDown() throws Exception {
 		super.tearDown();
 
 		RealmTester.setDefault(null);
 	}
 
-	protected Shell getShell() {
-		if (shell == null) {
-			shell = new Shell(SWT.V_SCROLL);
-		}
-		return shell;
+	@Override
+	protected Shell createShell() {
+		return new Shell(SWT.V_SCROLL);
 	}
 
 	public void testObserveForeground() throws Exception {
@@ -394,7 +395,7 @@ public class SWTObservablesTest extends AbstractSWTTestCase {
 		ISWTObservableValue value = WidgetProperties.singleSelectionIndex()
 				.observe(cCombo);
 		assertEquals(0, cCombo.getSelectionIndex());
-		value.setValue(new Integer(-1));
+		value.setValue(Integer.valueOf(-1));
 		assertEquals(-1, cCombo.getSelectionIndex());
 	}
 
@@ -420,7 +421,7 @@ public class SWTObservablesTest extends AbstractSWTTestCase {
 		ISWTObservableValue value = WidgetProperties.singleSelectionIndex()
 				.observe(combo);
 		assertEquals(0, combo.getSelectionIndex());
-		value.setValue(new Integer(-1));
+		value.setValue(Integer.valueOf(-1));
 		assertEquals(-1, combo.getSelectionIndex());
 	}
 
@@ -446,7 +447,7 @@ public class SWTObservablesTest extends AbstractSWTTestCase {
 		ISWTObservableValue value = WidgetProperties.singleSelectionIndex()
 				.observe(list);
 		assertEquals(0, list.getSelectionIndex());
-		value.setValue(new Integer(-1));
+		value.setValue(Integer.valueOf(-1));
 		assertEquals(-1, list.getSelectionIndex());
 	}
 
@@ -472,7 +473,7 @@ public class SWTObservablesTest extends AbstractSWTTestCase {
 		ISWTObservableValue value = WidgetProperties.singleSelectionIndex()
 				.observe(table);
 		assertEquals(0, table.getSelectionIndex());
-		value.setValue(new Integer(-1));
+		value.setValue(Integer.valueOf(-1));
 		assertEquals(-1, table.getSelectionIndex());
 	}
 
