@@ -18,9 +18,9 @@ import org.eclipse.core.resources.IFile;
 import org.eclipse.core.resources.IResource;
 import org.eclipse.core.resources.IWorkspace;
 import org.eclipse.core.resources.ResourcesPlugin;
+import org.eclipse.core.runtime.Adapters;
 import org.eclipse.core.runtime.IAdaptable;
 import org.eclipse.core.runtime.IPath;
-import org.eclipse.core.runtime.Platform;
 import org.eclipse.jface.action.IMenuListener;
 import org.eclipse.jface.action.IMenuManager;
 import org.eclipse.jface.action.MenuManager;
@@ -55,8 +55,8 @@ import org.eclipse.ui.IViewSite;
 import org.eclipse.ui.IWorkbenchPage;
 import org.eclipse.ui.IWorkbenchPart;
 import org.eclipse.ui.PartInitException;
-import org.eclipse.ui.PlatformUI;
 import org.eclipse.ui.actions.ActionContext;
+import org.eclipse.ui.internal.WorkbenchPlugin;
 import org.eclipse.ui.internal.views.navigator.ResourceNavigatorMessages;
 import org.eclipse.ui.part.DrillDownAdapter;
 import org.eclipse.ui.part.ViewPart;
@@ -77,7 +77,7 @@ public class AdaptedResourceNavigator extends ViewPart {
 
     /**
      * Preference name constant for linking editor switching to navigator selection.
-     * 
+     *
      * [Issue: We're cheating here, by referencing a preference which is actually defined
      * on the Workbench's preference page.  The Navigator should eventually have its own
      * preference page with this preference on it, instead of on the Workbench's.
@@ -86,21 +86,27 @@ public class AdaptedResourceNavigator extends ViewPart {
     private static final String LINK_NAVIGATOR_TO_EDITOR = "LINK_NAVIGATOR_TO_EDITOR"; //$NON-NLS-1$
 
     private IPartListener partListener = new IPartListener() {
-        public void partActivated(IWorkbenchPart part) {
-            if (part instanceof IEditorPart)
-                editorActivated((IEditorPart) part);
+        @Override
+		public void partActivated(IWorkbenchPart part) {
+            if (part instanceof IEditorPart) {
+				editorActivated((IEditorPart) part);
+			}
         }
 
-        public void partBroughtToTop(IWorkbenchPart part) {
+        @Override
+		public void partBroughtToTop(IWorkbenchPart part) {
         }
 
-        public void partClosed(IWorkbenchPart part) {
+        @Override
+		public void partClosed(IWorkbenchPart part) {
         }
 
-        public void partDeactivated(IWorkbenchPart part) {
+        @Override
+		public void partDeactivated(IWorkbenchPart part) {
         }
 
-        public void partOpened(IWorkbenchPart part) {
+        @Override
+		public void partOpened(IWorkbenchPart part) {
         }
     };
 
@@ -111,7 +117,9 @@ public class AdaptedResourceNavigator extends ViewPart {
         IDialogSettings workbenchSettings = getPlugin().getDialogSettings();
         settings = workbenchSettings.getSection("ResourceNavigator"); //$NON-NLS-1$
         if (settings == null)
-            settings = workbenchSettings.addNewSection("ResourceNavigator"); //$NON-NLS-1$
+		 {
+			settings = workbenchSettings.addNewSection("ResourceNavigator"); //$NON-NLS-1$
+		}
     }
 
     /**
@@ -124,15 +132,7 @@ public class AdaptedResourceNavigator extends ViewPart {
             IStructuredSelection ssel = (IStructuredSelection) selection;
             for (Iterator i = ssel.iterator(); i.hasNext();) {
                 Object o = i.next();
-                IResource resource = null;
-                if (o instanceof IResource) {
-                    resource = (IResource) o;
-                } else {
-                    if (o instanceof IAdaptable) {
-                        resource = (IResource) ((IAdaptable) o)
-                                .getAdapter(IResource.class);
-                    }
-                }
+				IResource resource = Adapters.adapt(o, IResource.class);
                 if (resource != null) {
                     list.add(resource);
                 }
@@ -141,10 +141,8 @@ public class AdaptedResourceNavigator extends ViewPart {
         return new StructuredSelection(list);
     }
 
-    /* (non-Javadoc)
-     * Method declared on IWorkbenchPart.
-     */
-    public void createPartControl(Composite parent) {
+    @Override
+	public void createPartControl(Composite parent) {
         viewer = new TreeViewer(parent, SWT.MULTI | SWT.H_SCROLL | SWT.V_SCROLL);
         //	initDrillDownAdapter(viewer);
         viewer.setUseHashlookup(true);
@@ -161,7 +159,8 @@ public class AdaptedResourceNavigator extends ViewPart {
         MenuManager menuMgr = new MenuManager("#PopupMenu"); //$NON-NLS-1$
         menuMgr.setRemoveAllWhenShown(true);
         menuMgr.addMenuListener(new IMenuListener() {
-            public void menuAboutToShow(IMenuManager manager) {
+            @Override
+			public void menuAboutToShow(IMenuManager manager) {
                 AdaptedResourceNavigator.this.fillContextMenu(manager);
             }
         });
@@ -178,21 +177,25 @@ public class AdaptedResourceNavigator extends ViewPart {
         actionGroup.updateGlobalActions(selection);
 
         viewer.addSelectionChangedListener(new ISelectionChangedListener() {
-            public void selectionChanged(SelectionChangedEvent event) {
+            @Override
+			public void selectionChanged(SelectionChangedEvent event) {
                 handleSelectionChanged(event);
             }
         });
         viewer.addDoubleClickListener(new IDoubleClickListener() {
-            public void doubleClick(DoubleClickEvent event) {
+            @Override
+			public void doubleClick(DoubleClickEvent event) {
                 handleDoubleClick(event);
             }
         });
         viewer.getControl().addKeyListener(new KeyListener() {
-            public void keyPressed(KeyEvent event) {
+            @Override
+			public void keyPressed(KeyEvent event) {
                 handleKeyPressed(event);
             }
 
-            public void keyReleased(KeyEvent event) {
+            @Override
+			public void keyReleased(KeyEvent event) {
                 handleKeyReleased(event);
             }
         });
@@ -203,15 +206,14 @@ public class AdaptedResourceNavigator extends ViewPart {
 
         getSite().getPage().addPartListener(partListener);
 
-        if (memento != null)
-            restoreState(memento);
+        if (memento != null) {
+			restoreState(memento);
+		}
         memento = null;
     }
 
-    /* (non-Javadoc)
-     * Method declared on IWorkbenchPart.
-     */
-    public void dispose() {
+    @Override
+	public void dispose() {
         getSite().getPage().removePartListener(partListener);
         super.dispose();
     }
@@ -221,8 +223,9 @@ public class AdaptedResourceNavigator extends ViewPart {
      * to be the editor's input, if linking is enabled.
      */
     void editorActivated(IEditorPart editor) {
-        if (!isLinkingEnabled())
-            return;
+        if (!isLinkingEnabled()) {
+			return;
+		}
 
         IEditorInput input = editor.getEditorInput();
         if (input instanceof IFileEditorInput) {
@@ -244,7 +247,7 @@ public class AdaptedResourceNavigator extends ViewPart {
         actionGroup.fillContextMenu(menu);
     }
 
-    /** 
+    /**
      * Returns the initial input for the viewer.
      * Tries to convert the input to a resource, either directly or via IAdaptable.
      * If the resource is a container, it uses that.
@@ -253,12 +256,7 @@ public class AdaptedResourceNavigator extends ViewPart {
      */
     IContainer getInitialInput() {
         IAdaptable input = getSite().getPage().getInput();
-        IResource resource = null;
-        if (input instanceof IResource) {
-            resource = (IResource) input;
-        } else {
-            resource = (IResource) input.getAdapter(IResource.class);
-        }
+		IResource resource = Adapters.adapt(input, IResource.class);
         if (resource != null) {
             switch (resource.getType()) {
             case IResource.FILE:
@@ -279,7 +277,7 @@ public class AdaptedResourceNavigator extends ViewPart {
      * Returns the navigator's plugin.
      */
     public AbstractUIPlugin getPlugin() {
-        return (AbstractUIPlugin) Platform.getPlugin(PlatformUI.PLUGIN_ID);
+		return WorkbenchPlugin.getDefault();
     }
 
     /**
@@ -321,7 +319,7 @@ public class AdaptedResourceNavigator extends ViewPart {
 			return ResourceNavigatorMessages.ResourceNavigator_oneItemSelected;
         }
         if (selection.size() > 1) {
-            return NLS.bind(ResourceNavigatorMessages.ResourceNavigator_statusLine, new Integer(selection.size()));
+            return NLS.bind(ResourceNavigatorMessages.ResourceNavigator_statusLine, Integer.valueOf(selection.size()));
         }
         return ""; //$NON-NLS-1$
     }
@@ -386,10 +384,8 @@ public class AdaptedResourceNavigator extends ViewPart {
 
     }
 
-    /* (non-Javadoc)
-     * Method declared on IViewPart.
-     */
-    public void init(IViewSite site, IMemento memento) throws PartInitException {
+    @Override
+	public void init(IViewSite site, IMemento memento) throws PartInitException {
         super.init(site, memento);
         this.memento = memento;
     }
@@ -401,7 +397,8 @@ public class AdaptedResourceNavigator extends ViewPart {
         DrillDownAdapter drillDownAdapter = new DrillDownAdapter(viewer) {
             // need to update title whenever input changes;
             // updateNavigationButtons is called whenever any of the drill down buttons are used
-            protected void updateNavigationButtons() {
+            @Override
+			protected void updateNavigationButtons() {
                 super.updateNavigationButtons();
                 updateTitle();
             }
@@ -424,16 +421,17 @@ public class AdaptedResourceNavigator extends ViewPart {
      * @since 2.0
      */
     protected void linkToEditor(IStructuredSelection selection) {
-        if (!isLinkingEnabled())
-            return;
+        if (!isLinkingEnabled()) {
+			return;
+		}
 
         Object obj = selection.getFirstElement();
         if (obj instanceof IFile && selection.size() == 1) {
             IFile file = (IFile) obj;
             IWorkbenchPage page = getSite().getPage();
             IEditorReference editorArray[] = page.getEditorReferences();
-            for (int i = 0; i < editorArray.length; ++i) {
-                IEditorPart editor = editorArray[i].getEditor(true);
+            for (IEditorReference element : editorArray) {
+                IEditorPart editor = element.getEditor(true);
                 IEditorInput input = editor.getEditorInput();
                 if (input instanceof IFileEditorInput
                         && file.equals(((IFileEditorInput) input).getFile())) {
@@ -460,7 +458,8 @@ public class AdaptedResourceNavigator extends ViewPart {
     protected void restoreState(IMemento memento) {
     }
 
-    public void saveState(IMemento memento) {
+    @Override
+	public void saveState(IMemento memento) {
     }
 
     /**
@@ -476,7 +475,8 @@ public class AdaptedResourceNavigator extends ViewPart {
     /**
      * @see IWorkbenchPart#setFocus()
      */
-    public void setFocus() {
+    @Override
+	public void setFocus() {
         getViewer().getTree().setFocus();
     }
 
