@@ -24,6 +24,7 @@ import org.eclipse.core.runtime.IProgressMonitor;
 import org.eclipse.core.runtime.IStatus;
 import org.eclipse.core.runtime.Status;
 import org.eclipse.core.runtime.SubMonitor;
+import org.eclipse.jface.databinding.swt.DisplayRealm;
 import org.eclipse.jface.databinding.swt.SWTObservables;
 import org.eclipse.jface.dialogs.MessageDialog;
 import org.eclipse.jface.layout.GridDataFactory;
@@ -53,10 +54,9 @@ import org.eclipse.ui.progress.IJobRunnable;
 
 /**
  * @since 3.3
- * 
+ *
  */
-public class TestBackgroundSaveEditor extends EditorPart implements
-		ISaveablesSource {
+public class TestBackgroundSaveEditor extends EditorPart implements ISaveablesSource {
 
 	public class MySaveable extends Saveable {
 
@@ -64,15 +64,16 @@ public class TestBackgroundSaveEditor extends EditorPart implements
 
 		private boolean dirty;
 
+		@Override
 		public void doSave(IProgressMonitor monitor) throws CoreException {
 			SubMonitor subMonitor = SubMonitor.convert(monitor, 2);
-			IJobRunnable runnable = doSave(subMonitor.newChild(1), getSite());
-			if (runnable!=null) {
-				runnable.run(subMonitor.newChild(1));
+			IJobRunnable runnable = doSave(subMonitor.split(1), getSite());
+			if (runnable != null) {
+				runnable.run(subMonitor.split(1));
 			}
-			monitor.done();
 		}
 
+		@Override
 		public IJobRunnable doSave(IProgressMonitor monitor,
 				IShellProvider shellProvider) throws CoreException {
 			monitor.beginTask("Saving in the foreground",
@@ -103,6 +104,7 @@ public class TestBackgroundSaveEditor extends EditorPart implements
 				return null;
 			}
 			IJobRunnable result = new IJobRunnable() {
+				@Override
 				public IStatus run(IProgressMonitor monitor) {
 					monitor.beginTask("Saving in the background",
 							data.backgroundSaveTime);
@@ -135,34 +137,41 @@ public class TestBackgroundSaveEditor extends EditorPart implements
 			return result;
 		}
 
+		@Override
 		public boolean equals(Object object) {
 			return this == object;
 		}
 
+		@Override
 		public ImageDescriptor getImageDescriptor() {
 			return input.getImageDescriptor();
 		}
 
+		@Override
 		public String getName() {
 			return input.getName();
 		}
 
+		@Override
 		public String getToolTipText() {
 			return input.getToolTipText();
 		}
 
+		@Override
 		public int hashCode() {
 			return System.identityHashCode(this);
 		}
 
+		@Override
 		public boolean isDirty() {
 			return dirty;
 		}
 
 		public void setDirty(boolean dirty) {
-			firePropertyChange("dirty", new Boolean(this.dirty), new Boolean(
+			firePropertyChange("dirty", Boolean.valueOf(this.dirty), Boolean.valueOf(
 					this.dirty = dirty));
 			getSite().getShell().getDisplay().syncExec(new Runnable(){
+				@Override
 				public void run() {
 					TestBackgroundSaveEditor.this
 					.firePropertyChange(ISaveablePart.PROP_DIRTY);
@@ -193,10 +202,12 @@ public class TestBackgroundSaveEditor extends EditorPart implements
 		mySaveable = new MySaveable();
 	}
 
+	@Override
 	public void createPartControl(Composite parent) {
-		Realm realm = SWTObservables.getRealm(parent.getDisplay());
+		Realm realm = DisplayRealm.getRealm(parent.getDisplay());
 		final DataBindingContext dbc = new DataBindingContext(realm);
 		parent.addDisposeListener(new DisposeListener() {
+			@Override
 			public void widgetDisposed(DisposeEvent e) {
 				dbc.dispose();
 			}
@@ -241,7 +252,7 @@ public class TestBackgroundSaveEditor extends EditorPart implements
 				dirtyObservable, null, null);
 		// IObservableValue inputAndOutputDiffer = new ComputedValue(realm) {
 		// protected Object calculate() {
-		// return new Boolean(!Util.equals(inputObservable.getValue(),
+		// return Boolean.valueOf(!Util.equals(inputObservable.getValue(),
 		// outputObservable.getValue()));
 		// }
 		// };
@@ -296,6 +307,7 @@ public class TestBackgroundSaveEditor extends EditorPart implements
 		GridLayoutFactory.swtDefaults().generateLayout(inputGroup);
 	}
 
+	@Override
 	public void doSave(IProgressMonitor monitor) {
 		try {
 			mySaveable.doSave(monitor);
@@ -308,28 +320,34 @@ public class TestBackgroundSaveEditor extends EditorPart implements
 		}
 	}
 
+	@Override
 	public void doSaveAs() {
 		Assert.isTrue(false, "Should not be called");
 	}
 
+	@Override
 	public void init(IEditorSite site, IEditorInput input)
 			throws PartInitException {
-		if (!(input instanceof IFileEditorInput))
+		if (!(input instanceof IFileEditorInput)) {
 			throw new PartInitException(
 					"Invalid Input: Must be IFileEditorInput");
+		}
 		setSite(site);
 		setInput(input);
 		this.input = input;
 	}
 
+	@Override
 	public boolean isDirty() {
 		return mySaveable.isDirty();
 	}
 
+	@Override
 	public boolean isSaveAsAllowed() {
 		return false;
 	}
 
+	@Override
 	public void setFocus() {
 		inputText.setFocus();
 	}
@@ -478,12 +496,14 @@ public class TestBackgroundSaveEditor extends EditorPart implements
 
 	private Data data = new Data();
 
+	@Override
 	public Saveable[] getActiveSaveables() {
 		return new Saveable[] { mySaveable };
 	}
 
+	@Override
 	public Saveable[] getSaveables() {
 		return new Saveable[] { mySaveable };
 	}
-	
+
 }
